Add Hungarian Translation
- Updated other languages
- Closes #2140

--- a/src/extensions/languages/Arabic.json
+++ b/src/extensions/languages/Arabic.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "القطعة: الإطار المنزلق",
         "core_watchfolders_manager_label": "مدير: مشاهدة المجلدات",
         "core_watchfolders_menuitem_label": "مشاهدة عنصر القائمة مجلد",
+        "correctSpellingAutomatically": "تصحيح الإملاء تلقائيًا",
         "cpAddNoteToSelectedClip_title": "إضافة ملاحظة إلى القصاصة المحددة",
         "cpAddNoteToSelectedClips_title": "إضافة ملاحظة إلى المقاطع المحددة",
         "cpAllowTasksDuringPlayback_title": "تبديل العرض أثناء التشغيل",
@@ -669,6 +670,7 @@
         "favorites": "المفضلة",
         "favourite": "المفضلة",
         "favouriteFolderError": "لا يوجد مجلد مفضل يتم حفظه حاليًا لهذا الإجراء.\n\nيرجى حفظ مجلد مفضل لهذا الإجراء والمحاولة مرة أخرى.",
+        "favouriteKeyword": "الكلمات الرئيسية المفضلة",
         "favourites": "المفضلة",
         "fcpMediaFolderCancel": "إلغاء الأمر",
         "fcpMediaFolderImport": "استيراد",
@@ -756,6 +758,7 @@
         "finalcutpro_browser_layouts_label": "المتصفح: حفظ واستعادة التنسيقات",
         "finalcutpro_browser_pasteboardtomarkers_label": "المتصفح: علامات الكرتون إلى قصاصة",
         "finalcutpro_browser_playhead_label": "المستعرض: ميزات Playhead",
+        "finalcutpro_browser_selectlibrary_label": "المتصفح: اختر المكتبة",
         "finalcutpro_browser_soloclip_label": "المتصفح: منفرد كليب",
         "finalcutpro_commands_actions_label": "إجراءات الأوامر",
         "finalcutpro_commands_label": "قص النهائي أوامر لوحة المفاتيح برو",
@@ -814,6 +817,7 @@
         "finalcutpro_midi_controls_video_label": "ميدي التحكم: المفتش الفيديو",
         "finalcutpro_midi_controls_zoom_label": "ميدي التحكم: تكبير الخط الزمني",
         "finalcutpro_midi_manager_label": "مدير: ميدي",
+        "finalcutpro_notifications_ifttt_label": "الإخطارات: IFTTT",
         "finalcutpro_notifications_imessage_label": "الإشعارات: iMessage",
         "finalcutpro_notifications_manager_label": "مدير: الإخطارات",
         "finalcutpro_notifications_prowl_label": "الإشعارات: جوس",
@@ -826,6 +830,7 @@
         "finalcutpro_preferences_general_label": "التفضيلات: عامة",
         "finalcutpro_preferences_manager_label": "التفضيلات: مدير الفريق",
         "finalcutpro_preferences_scanfinalcutpro_label": "التفضيلات: المسح النهائي قص برو",
+        "finalcutpro_preferences_spelling_label": "التفضيلات: هجاء",
         "finalcutpro_setup_scan_label": "الإعداد: قص النهائي برو البرنامج المساعد مسح",
         "finalcutpro_setup_unsupportedversion_label": "الإعداد: الاختيار إصدار غير معتمد",
         "finalcutpro_streamdeck_label": "تيار سطح السفينة",
@@ -946,6 +951,7 @@
         "global_pasteboard_action": "تاريخ اللوح النص",
         "global_screencapture_action": "تصوير الشاشة",
         "global_scripts_action": "ابليسكريبت",
+        "global_snippets_action": "قصاصات",
         "global_streamDeckbanks_action": "دفق البنوك السطح",
         "global_touchbarbanks_action": "لمس بار البنوك",
         "global_widgets_action": "القطع العالمية تعمل باللمس شريط",
@@ -954,6 +960,10 @@
         "goToBeginning": "الانتقال إلى بداية",
         "goToColorInspector": "اذهب إلى المفتش اللون",
         "goToEnd": "الانتقال إلى نهاية",
+        "goToNextFrameWithMutedAudio": "انتقل إلى الإطار التالي (مع كتم الصوت)",
+        "goToNextFrameWithMutedAudioDescription": "انقل Playhead إلى الإطار التالي بصوت خافت.",
+        "goToPreviousFrameWithMutedAudio": "انتقل إلى الإطار السابق (مع كتم الصوت)",
+        "goToPreviousFrameWithMutedAudioDescription": "حرك Playhead إلى الإطار السابق مع كتم الصوت.",
         "goToRangeEnd": "الانتقال إلى نهاية النطاق",
         "goToRangeStart": "انتقل إلى مجموعة ابدأ",
         "gradient": "الانحدار",
@@ -971,6 +981,7 @@
         "helpTranslateCommandPost": "مساعدة في ترجمة CommandPost",
         "helpandsupport_group": "المساعدة في دعم آند",
         "hiddenFinalCutProPreferences": "تفضيلات Final Cut Pro المخفية",
+        "hideKeyword": "إخفاء الكلمات الرئيسية",
         "hideRejected": "إخفاء مرفوض",
         "high": "متوسط",
         "highlightPlayhead": "قم بتمييز Playhead",
@@ -1004,6 +1015,13 @@
         "iMessageNotifications": "iMessage الإخطارات",
         "icon": "رمز",
         "identification": "هوية",
+        "iftttAPIKey": "Webhook API Key",
+        "iftttEnableNotifications": "تمكين التكامل IFTTT",
+        "iftttEventName": "اسم الحدث Webhook",
+        "iftttGetAPIKey": "الحصول على Webhook API Key",
+        "iftttNotifications": "إخطارات IFTTT",
+        "iftttServerFailed": "خطأ في اتصال خادم IFTTT",
+        "iftttSignup": "الاشتراك للحصول على حساب IFTTT",
         "ignore": "تجاهل",
         "ignoreBackgroundTasks": "تجاهل تحذير مهام الخلفية",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "تجاهل مفتاح ESC عند \"قص النهائي برو\" هو ملء الشاشة",
@@ -1130,6 +1148,7 @@
         "medium": "متوسط",
         "memory": "الذاكرة",
         "menuChoiceSubText": "القائمة:٪ {path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "لا يمكن تشغيل عنصر القائمة بنجاح.",
         "menubarHeading": "شريط القوائم",
         "menubarPanelLabel": "شريط القوائم",
         "menubarPanelTooltip": "تفضيلات شريط القوائم",
@@ -1381,9 +1400,11 @@
         "relative": "نسبيا",
         "reload": "إعادة تحميل",
         "rememberLastQuery": "تذكر الاستعلام الأخير",
+        "removeFavouriteKeyword": "إزالة الكلمة الرئيسية المفضلة",
         "removeFromList": "إزالة من قائمة",
         "renameButton": "إعادة تسمية زر",
         "renameButtonQuestion": "ما الذي ترغب في إعادة تسمية هذا الزر إليه؟",
+        "renameClip": "إعادة تسمية كليب",
         "renderComplete": "التجسيد الكامل!",
         "replace": "يحل محل",
         "replaceAll": "استبدال الكل",
@@ -1411,6 +1432,11 @@
         "restore": "استعادة",
         "restoreBrowserLayoutForSelectedCollection_title": "استعادة تخطيط المتصفح لمجموعة مختارة",
         "restoreBrowserLayoutToMemory": "استعادة تخطيط المتصفح إلى الذاكرة",
+        "restoreHiddenKeyword": "استعادة الكلمة المخفية",
+        "revealInKeywordCollection": "تكشف في مجموعة الكلمات الرئيسية",
+        "revealInKeywordCollectionAndSolo": "تكشف في مجموعة الكلمات الرئيسية & سولو",
+        "revealInKeywordCollectionAndSoloDescription": "يكشف مقطع الخط الزمني المحدد حاليًا في مجموعة كلمات أساسية للمتصفح & منفرد",
+        "revealInKeywordCollectionDescription": "يكشف مقطع الخط الزمني المحدد حاليًا في مجموعة كلمات أساسية للمتصفح محددة",
         "reverse": "عكس",
         "right": "حق",
         "rightClickToAssignAction": "يمكنك النقر بزر الماوس الأيمن فوق هذا الزر لتعيين إجراء له.",
@@ -1476,6 +1502,7 @@
         "segments": "شرائح",
         "select": "حدد",
         "selectAFolderToSaveCSV": "الرجاء تحديد مجلد لحفظ ملف CSV إليه",
+        "selectActiveLibraryInBrowser": "حدد المكتبة النشطة في المستعرض",
         "selectCompressorDestination": "حدد مجلد وجهة:",
         "selectCompressorSettingsFile": "حدد ملف إعدادات ضاغط:",
         "selectDestinationFolder": "الرجاء تحديد \"مجلد الوجهة\":",
@@ -1487,6 +1514,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "حدد منتصف المقطع السابق في نفس القصة",
         "selectRightAudioEdge": "حدد حافة حق الصوت",
         "selectRightEdge": "حدد الحافة اليمنى",
+        "selectTopmostLibraryInBrowser": "حدد أعلى مكتبة في المتصفح",
         "selectVoice": "تحديد صوت",
         "selected": "المحدد",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "لا يعرض المقطع المحدد أي خيارات محاذاة النص.",
@@ -1694,6 +1722,7 @@
         "softness": "نعومة",
         "sound": "الصوت",
         "spacing": "المباعدة بين الولادات",
+        "sponsorCommandPost": "الراعي CommandPost",
         "stabilizationMethod": "طريقة الاستقرار",
         "start": "بدء تشغيل",
         "startScan": "بدء المسح الضوئي",
