--- a/src/extensions/languages/Bengali.json
+++ b/src/extensions/languages/Bengali.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "উইজেট: উইন্ডো স্লাইডার",
         "core_watchfolders_manager_label": "ম্যানেজার: দেখুন ফোল্ডার",
         "core_watchfolders_menuitem_label": "ফোল্ডার মেনু আইটেমটি দেখুন",
+        "correctSpellingAutomatically": "স্বয়ংক্রিয়ভাবে বানান সংশোধন করুন",
         "cpAddNoteToSelectedClip_title": "নির্বাচিত ক্লিপ থেকে নোট যোগ করুন",
         "cpAddNoteToSelectedClips_title": "নির্বাচিত ক্লিপগুলিতে নোট যুক্ত করুন",
         "cpAllowTasksDuringPlayback_title": "প্লেব্যাকের সময় রেন্ডারিং টগল করুন",
@@ -665,6 +666,7 @@
         "favorites": "প্রিয়",
         "favourite": "প্রিয়",
         "favouriteFolderError": "এই ক্রিয়াটির জন্য বর্তমানে কোনও প্রিয় ফোল্ডার নেই folder\n\nএই ক্রিয়াটির জন্য দয়া করে একটি প্রিয় ফোল্ডার সংরক্ষণ করুন এবং আবার চেষ্টা করুন।",
+        "favouriteKeyword": "প্রিয় কীওয়ার্ড",
         "favourites": "প্রিয়",
         "fcpMediaFolderCancel": "বাতিল",
         "fcpMediaFolderImport": "আমদানি",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "ব্রাউজার: সংরক্ষণ করুন এবং লেআউট পুনঃস্থাপন",
         "finalcutpro_browser_pasteboardtomarkers_label": "ব্রাউজার: ক্লিপ করার জন্য প্যাচবোর্ড মার্কার",
         "finalcutpro_browser_playhead_label": "ব্রাউজার: প্লেহেড বৈশিষ্ট্য",
+        "finalcutpro_browser_selectlibrary_label": "ব্রাউজার: লাইব্রেরি নির্বাচন করুন",
         "finalcutpro_browser_soloclip_label": "ব্রাউজার: সোল ক্লিপ",
         "finalcutpro_commands_actions_label": "কমান্ড অ্যাকশন",
         "finalcutpro_commands_label": "ফাইনাল কাট প্রো কীবোর্ড কমান্ড",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI নিয়ন্ত্রণ: ভিডিও ইন্সপেক্টর",
         "finalcutpro_midi_controls_zoom_label": "MIDI নিয়ন্ত্রণ: টাইমলাইন জুম",
         "finalcutpro_midi_manager_label": "ম্যানেজার: MIDI",
+        "finalcutpro_notifications_ifttt_label": "বিজ্ঞপ্তি: IFTTT",
         "finalcutpro_notifications_imessage_label": "বিজ্ঞপ্তিগুলি: iMessage",
         "finalcutpro_notifications_manager_label": "ম্যানেজার: বিজ্ঞপ্তি",
         "finalcutpro_notifications_prowl_label": "বিজ্ঞপ্তি: প্রলয়",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "পছন্দসমূহ: সাধারণ",
         "finalcutpro_preferences_manager_label": "পছন্দের: প্যানেল ম্যানেজার",
         "finalcutpro_preferences_scanfinalcutpro_label": "পছন্দসমূহ: ফাইনাল কাট প্রো স্ক্যান",
+        "finalcutpro_preferences_spelling_label": "পছন্দসমূহ: বানান",
         "finalcutpro_setup_scan_label": "সেটআপ: ফাইনাল কাট প্রো প্লাগইন স্ক্যান",
         "finalcutpro_setup_unsupportedversion_label": "সেটআপ: অসমর্থিত সংস্করণ চেক",
         "finalcutpro_streamdeck_label": "স্ট্রিম ডেক",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "পাঠ্য বোর্ডের ইতিহাস History",
         "global_screencapture_action": "স্ক্রিন ক্যাপচার",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "টুকিটাকি",
         "global_streamDeckbanks_action": "স্ট্রিম ডেক ব্যাংক",
         "global_touchbarbanks_action": "টাচ বার ব্যাংক",
         "global_widgets_action": "গ্লোবাল টাচ বার উইজেট",
@@ -938,6 +944,10 @@
         "goToBeginning": "শুরুতে যান",
         "goToColorInspector": "রঙ ইন্সপেক্টর যান",
         "goToEnd": "শেষ পর্যন্ত যান",
+        "goToNextFrameWithMutedAudio": "নেক্সট ফ্রেমে যান (নিঃশব্দ অডিও সহ)",
+        "goToNextFrameWithMutedAudioDescription": "নিঃশব্দ অডিও সহ পরবর্তী ফ্রেমে প্লেহেড সরান।",
+        "goToPreviousFrameWithMutedAudio": "পূর্ববর্তী ফ্রেমে যান (নিঃশব্দ অডিও সহ)",
+        "goToPreviousFrameWithMutedAudioDescription": "নিঃশব্দ অডিও সহ প্লেহেডটি আগের ফ্রেমে সরান।",
         "goToRangeEnd": "পরিসর সমাপ্তে যান",
         "goToRangeStart": "পরিসর শুরুতে যান",
         "gradient": "নতিমাত্রা",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "কমান্ডপোস্ট অনুবাদ অনুবাদ করুন",
         "helpandsupport_group": "সাহায্য সহযোগীতা",
         "hiddenFinalCutProPreferences": "লুকানো ফাইনাল কাট প্রো পছন্দসমূহ",
+        "hideKeyword": "কীওয়ার্ড লুকান",
         "hideRejected": "প্রত্যাখাত লুকান",
         "high": "উচ্চ",
         "highlightPlayhead": "প্লেহেড হাইলাইট করুন",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage বিজ্ঞপ্তিগুলি",
         "icon": "আইকন",
         "identification": "সনাক্ত",
+        "iftttAPIKey": "ওয়েবহুক এপিআই কী",
+        "iftttEnableNotifications": "আইএফটিটিটি ইন্টিগ্রেশন সক্ষম করুন",
+        "iftttEventName": "ওয়েবহুক ইভেন্টের নাম",
+        "iftttGetAPIKey": "ওয়েবহুক এপিআই কী পান",
+        "iftttNotifications": "আইএফটিটিটি বিজ্ঞপ্তি",
+        "iftttServerFailed": "আইএফটিটিটি সার্ভার সংযোগ ত্রুটি",
+        "iftttSignup": "আইএফটিটিটি অ্যাকাউন্টের জন্য সাইনআপ করুন",
         "ignore": "উপেক্ষা করা",
         "ignoreBackgroundTasks": "পটভূমি কাজ সতর্কতা উপেক্ষা করুন",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "চূড়ান্ত কাট প্রো পূর্ণ স্ক্রীন যখন ESC কী উপেক্ষা করুন",
@@ -1110,6 +1128,7 @@
         "medium": "মধ্যম",
         "memory": "স্মৃতি",
         "menuChoiceSubText": "মেনু: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "মেনু আইটেমটি সফলভাবে ট্রিগার করা যায়নি।",
         "menubarHeading": "মেনুবার",
         "menubarPanelLabel": "মেনুবার",
         "menubarPanelTooltip": "মেনুবার পছন্দসমূহ",
@@ -1357,9 +1376,11 @@
         "relative": "আপেক্ষিক",
         "reload": "পুনরায় বোঝাই করা",
         "rememberLastQuery": "সর্বশেষ প্রশ্ন মনে রাখুন",
+        "removeFavouriteKeyword": "প্রিয় কীওয়ার্ড সরান",
         "removeFromList": "তালিকা থেকে বাদ দাও",
         "renameButton": "নামকরণ বোতাম",
         "renameButtonQuestion": "আপনি কি এই বোতামটির নাম পরিবর্তন করতে চান?",
+        "renameClip": "ক্লিপটির নতুন নামকরণ করুন",
         "renderComplete": "সম্পূর্ণ পূরণ করুন!",
         "replace": "প্রতিস্থাপন করা",
         "replaceAll": "সমস্ত প্রতিস্থাপন",
@@ -1387,6 +1408,11 @@
         "restore": "প্রত্যর্পণ করা",
         "restoreBrowserLayoutForSelectedCollection_title": "নির্বাচিত সংগ্রহের জন্য ব্রাউজার বিন্যাস পুনরুদ্ধার করুন",
         "restoreBrowserLayoutToMemory": "মেমরি ব্রাউজার লেআউট পুনরুদ্ধার করুন",
+        "restoreHiddenKeyword": "লুকানো কীওয়ার্ড পুনরুদ্ধার করুন",
+        "revealInKeywordCollection": "কীওয়ার্ড সংগ্রহে প্রকাশ করুন",
+        "revealInKeywordCollectionAndSolo": "কীওয়ার্ড সংগ্রহ এবং একক প্রকাশ করুন",
+        "revealInKeywordCollectionAndSoloDescription": "একটি নির্দিষ্ট ব্রাউজার কীওয়ার্ড সংগ্রহের জন্য বর্তমানে নির্বাচিত টাইমলাইন ক্লিপটি প্রকাশ করে এবং এটি এককভাবে",
+        "revealInKeywordCollectionDescription": "একটি নির্দিষ্ট ব্রাউজার কীওয়ার্ড সংগ্রহে বর্তমানে নির্বাচিত টাইমলাইন ক্লিপটি প্রকাশ করে",
         "reverse": "বিপরীত",
         "right": "অধিকার",
         "rightClickToAssignAction": "এটিকে কোনও ক্রিয়া বরাদ্দ করতে আপনি এই বোতামটিতে ডান ক্লিক করতে পারেন।",
@@ -1444,6 +1470,7 @@
         "segments": "বিভাগগুলি",
         "select": "নির্বাচন করা",
         "selectAFolderToSaveCSV": "CSV এ সংরক্ষণ করতে দয়া করে একটি ফোল্ডার নির্বাচন করুন",
+        "selectActiveLibraryInBrowser": "ব্রাউজারে সক্রিয় লাইব্রেরি নির্বাচন করুন",
         "selectCompressorDestination": "একটি গন্তব্য ফোল্ডার নির্বাচন করুন:",
         "selectCompressorSettingsFile": "একটি কম্প্রেসার সেটিংস ফাইল নির্বাচন করুন:",
         "selectDestinationFolder": "একটি গন্তব্য ফোল্ডার নির্বাচন করুন:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "একই স্টোরিলাইনে পূর্বের ক্লিপের মধ্যবর্তী নির্বাচন করুন",
         "selectRightAudioEdge": "ডান অডিও এজ নির্বাচন করুন",
         "selectRightEdge": "ডান প্রান্ত নির্বাচন করুন",
+        "selectTopmostLibraryInBrowser": "ব্রাউজারে শীর্ষস্থানীয় লাইব্রেরি নির্বাচন করুন",
         "selectVoice": "ভয়েস নির্বাচন করুন",
         "selected": "নির্বাচিত",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "নির্বাচিত ক্লিপটি কোনও পাঠ্য প্রান্তিককরণ বিকল্প সরবরাহ করে না।",
@@ -1606,6 +1634,7 @@
         "softness": "স্নিগ্ধতা",
         "sound": "শব্দ",
         "spacing": "ব্যবধান",
+        "sponsorCommandPost": "স্পনসর কমান্ডপোস্ট",
         "stabilizationMethod": "স্থিতিশীল পদ্ধতি",
         "start": "শুরু",
         "startScan": "স্ক্যান শুরু",
