--- a/src/extensions/languages/Chinese (Simplified).json
+++ b/src/extensions/languages/Chinese (Simplified).json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "小部件：窗口滑块",
         "core_watchfolders_manager_label": "经理：观看文件夹",
         "core_watchfolders_menuitem_label": "观看文件夹菜单项",
+        "correctSpellingAutomatically": "自动纠正拼写",
         "cpAddNoteToSelectedClip_title": "添加所选剪辑的注释",
         "cpAddNoteToSelectedClips_title": "将注释添加到选定的剪辑",
         "cpAllowTasksDuringPlayback_title": "在播放期间切换渲染",
@@ -664,6 +665,7 @@
         "favorites": "最爱",
         "favourite": "喜爱",
         "favouriteFolderError": "目前没有为此操作保存的收藏夹文件夹。\n\n请为此操作保存收藏夹，然后重试。",
+        "favouriteKeyword": "最喜欢的关键字",
         "favourites": "最爱",
         "fcpMediaFolderCancel": "取消",
         "fcpMediaFolderImport": "进口",
@@ -736,6 +738,7 @@
         "finalcutpro_browser_layouts_label": "浏览器：保存和恢复布局",
         "finalcutpro_browser_pasteboardtomarkers_label": "浏览器：粘贴标记到剪辑",
         "finalcutpro_browser_playhead_label": "浏览器：播放头功能",
+        "finalcutpro_browser_selectlibrary_label": "浏览器：选择库",
         "finalcutpro_browser_soloclip_label": "浏览器：Solo Clip",
         "finalcutpro_commands_actions_label": "命令动作",
         "finalcutpro_commands_label": "Final Cut Pro键盘命令",
@@ -794,6 +797,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI控制：视频检查器",
         "finalcutpro_midi_controls_zoom_label": "MIDI控制：时间线缩放",
         "finalcutpro_midi_manager_label": "经理：MIDI",
+        "finalcutpro_notifications_ifttt_label": "通知：IFTTT",
         "finalcutpro_notifications_imessage_label": "通知：iMessage",
         "finalcutpro_notifications_manager_label": "经理：通知",
         "finalcutpro_notifications_prowl_label": "通知：徘徊",
@@ -806,6 +810,7 @@
         "finalcutpro_preferences_general_label": "偏好：一般",
         "finalcutpro_preferences_manager_label": "首选项：Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "首选项：扫描Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "首选项：拼写",
         "finalcutpro_setup_scan_label": "设置：Final Cut Pro插件扫描",
         "finalcutpro_setup_unsupportedversion_label": "设置：不支持的版本检查",
         "finalcutpro_streamdeck_label": "溪流甲板",
@@ -926,6 +931,7 @@
         "global_pasteboard_action": "文字粘贴板的历史记录",
         "global_screencapture_action": "屏幕截图",
         "global_scripts_action": "苹果脚本",
+        "global_snippets_action": "片段",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "触摸栏银行",
         "global_widgets_action": "全局触摸栏小部件",
@@ -934,6 +940,10 @@
         "goToBeginning": "转到开始",
         "goToColorInspector": "转到Color Inspector",
         "goToEnd": "转到结束",
+        "goToNextFrameWithMutedAudio": "转到下一帧（音频静音）",
+        "goToNextFrameWithMutedAudioDescription": "使用静音的音频将播放头移至下一帧。",
+        "goToPreviousFrameWithMutedAudio": "转到上一帧（音频静音）",
+        "goToPreviousFrameWithMutedAudioDescription": "使用静音的音频将播放头移至上一帧。",
         "goToRangeEnd": "转到Range End",
         "goToRangeStart": "转到Range Start",
         "gradient": "梯度",
@@ -951,6 +961,7 @@
         "helpTranslateCommandPost": "帮助翻译CommandPost",
         "helpandsupport_group": "帮助支持",
         "hiddenFinalCutProPreferences": "隐藏Final Cut Pro首选项",
+        "hideKeyword": "隐藏关键字",
         "hideRejected": "隐藏被拒绝",
         "high": "高",
         "highlightPlayhead": "突出显示播放头",
@@ -984,6 +995,13 @@
         "iMessageNotifications": "iMessage通知",
         "icon": "图标",
         "identification": "身份证明",
+        "iftttAPIKey": "Webhook API密钥",
+        "iftttEnableNotifications": "启用IFTTT集成",
+        "iftttEventName": "Webhook事件名称",
+        "iftttGetAPIKey": "获取Webhook API密钥",
+        "iftttNotifications": "IFTTT通知",
+        "iftttServerFailed": "IFTTT服务器连接错误",
+        "iftttSignup": "注册IFTTT帐户",
         "ignore": "忽视",
         "ignoreBackgroundTasks": "忽略后台任务警告",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "当Final Cut Pro为全屏时忽略ESC键",
@@ -1105,6 +1123,7 @@
         "medium": "介质",
         "memory": "记忆",
         "menuChoiceSubText": "菜单：％{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "菜单项无法成功触发。",
         "menubarHeading": "菜单栏",
         "menubarPanelLabel": "菜单栏",
         "menubarPanelTooltip": "菜单栏偏好",
@@ -1351,9 +1370,11 @@
         "relative": "相对的",
         "reload": "刷新",
         "rememberLastQuery": "记住上次查询",
+        "removeFavouriteKeyword": "删除最喜欢的关键字",
         "removeFromList": "从列表中删除",
         "renameButton": "重命名按钮",
         "renameButtonQuestion": "你想把这个按钮重命名为什么？",
+        "renameClip": "重命名剪辑",
         "renderComplete": "渲染完成！",
         "replace": "更换",
         "replaceAll": "全部替换",
@@ -1381,6 +1402,11 @@
         "restore": "恢复",
         "restoreBrowserLayoutForSelectedCollection_title": "恢复所选集合的浏览器布局",
         "restoreBrowserLayoutToMemory": "将浏览器布局还原到内存",
+        "restoreHiddenKeyword": "恢复隐藏的关键字",
+        "revealInKeywordCollection": "显示在关键字集合中",
+        "revealInKeywordCollectionAndSolo": "显示在关键字收集和独奏中",
+        "revealInKeywordCollectionAndSoloDescription": "在特定的浏览器关键字集合中显示当前选择的时间线剪辑，并单独显示",
+        "revealInKeywordCollectionDescription": "显示特定浏览器关键字集合中当前选定的时间线剪辑",
         "reverse": "相反",
         "right": "对",
         "rightClickToAssignAction": "您可以右键单击此按钮为其分配操作。",
@@ -1436,6 +1462,7 @@
         "segments": "段",
         "select": "选择",
         "selectAFolderToSaveCSV": "请选择要将CSV保存到的文件夹",
+        "selectActiveLibraryInBrowser": "在浏览器中选择活动库",
         "selectCompressorDestination": "选择目标文件夹：",
         "selectCompressorSettingsFile": "选择Compressor设置文件：",
         "selectDestinationFolder": "请选择目标文件夹：",
@@ -1447,6 +1474,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "选择相同故事情节中的上一个剪辑的中间部分",
         "selectRightAudioEdge": "选择右音频边缘",
         "selectRightEdge": "选择右边缘",
+        "selectTopmostLibraryInBrowser": "在浏览器中选择最顶层的库",
         "selectVoice": "选择语音",
         "selected": "选",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "所选剪辑不提供任何“文本对齐”选项。",
@@ -1584,6 +1612,7 @@
         "softness": "柔软度",
         "sound": "声音",
         "spacing": "间距",
+        "sponsorCommandPost": "赞助商指挥所",
         "stabilizationMethod": "稳定方法",
         "start": "开始",
         "startScan": "开始扫描",
