--- a/src/extensions/languages/Chinese (Traditional).json
+++ b/src/extensions/languages/Chinese (Traditional).json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "小部件：窗口滑塊",
         "core_watchfolders_manager_label": "經理：觀看文件夾",
         "core_watchfolders_menuitem_label": "觀看文件夾菜單項",
+        "correctSpellingAutomatically": "自動糾正拼寫",
         "cpAddNoteToSelectedClip_title": "添加所選剪輯的註釋",
         "cpAddNoteToSelectedClips_title": "將註釋添加到選定的剪輯",
         "cpAllowTasksDuringPlayback_title": "在播放期間切換渲染",
@@ -664,6 +665,7 @@
         "favorites": "最愛",
         "favourite": "喜愛",
         "favouriteFolderError": "目前沒有為此操作保存的收藏夾文件夾。\n\n請為此操作保存收藏夾，然後重試。",
+        "favouriteKeyword": "最喜歡的關鍵字",
         "favourites": "最愛",
         "fcpMediaFolderCancel": "取消",
         "fcpMediaFolderImport": "進口",
@@ -736,6 +738,7 @@
         "finalcutpro_browser_layouts_label": "瀏覽器：保存和恢復佈局",
         "finalcutpro_browser_pasteboardtomarkers_label": "瀏覽器：粘貼標記到剪輯",
         "finalcutpro_browser_playhead_label": "瀏覽器：播放頭功能",
+        "finalcutpro_browser_selectlibrary_label": "瀏覽器：選擇庫",
         "finalcutpro_browser_soloclip_label": "瀏覽器：Solo Clip",
         "finalcutpro_commands_actions_label": "命令動作",
         "finalcutpro_commands_label": "Final Cut Pro鍵盤命令",
@@ -794,6 +797,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI控制：視頻檢查器",
         "finalcutpro_midi_controls_zoom_label": "MIDI控制：時間線縮放",
         "finalcutpro_midi_manager_label": "經理：MIDI",
+        "finalcutpro_notifications_ifttt_label": "通知：IFTTT",
         "finalcutpro_notifications_imessage_label": "通知：iMessage",
         "finalcutpro_notifications_manager_label": "經理：通知",
         "finalcutpro_notifications_prowl_label": "通知：徘徊",
@@ -806,6 +810,7 @@
         "finalcutpro_preferences_general_label": "偏好：一般",
         "finalcutpro_preferences_manager_label": "首選項：Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "首選項：掃描Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "首選項：拼寫",
         "finalcutpro_setup_scan_label": "設置：Final Cut Pro插件掃描",
         "finalcutpro_setup_unsupportedversion_label": "設置：不支持的版本檢查",
         "finalcutpro_streamdeck_label": "溪流甲板",
@@ -926,6 +931,7 @@
         "global_pasteboard_action": "文字粘貼板的歷史記錄",
         "global_screencapture_action": "屏幕截圖",
         "global_scripts_action": "蘋果腳本",
+        "global_snippets_action": "片段",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "觸摸欄銀行",
         "global_widgets_action": "全局觸摸欄小部件",
@@ -934,6 +940,10 @@
         "goToBeginning": "轉到開始",
         "goToColorInspector": "轉到Color Inspector",
         "goToEnd": "轉到結束",
+        "goToNextFrameWithMutedAudio": "轉到下一幀（音頻靜音）",
+        "goToNextFrameWithMutedAudioDescription": "使用靜音的音頻將播放頭移至下一幀。",
+        "goToPreviousFrameWithMutedAudio": "轉到上一幀（音頻靜音）",
+        "goToPreviousFrameWithMutedAudioDescription": "使用靜音的音頻將播放頭移至上一幀。",
         "goToRangeEnd": "轉到Range End",
         "goToRangeStart": "轉到Range Start",
         "gradient": "梯度",
@@ -951,6 +961,7 @@
         "helpTranslateCommandPost": "幫助翻譯CommandPost",
         "helpandsupport_group": "幫助支持",
         "hiddenFinalCutProPreferences": "隱藏Final Cut Pro首選項",
+        "hideKeyword": "隱藏關鍵字",
         "hideRejected": "隱藏被拒絕",
         "high": "高",
         "highlightPlayhead": "突出顯示播放頭",
@@ -984,6 +995,13 @@
         "iMessageNotifications": "iMessage通知",
         "icon": "圖標",
         "identification": "身份證明",
+        "iftttAPIKey": "Webhook API密鑰",
+        "iftttEnableNotifications": "啟用IFTTT集成",
+        "iftttEventName": "Webhook事件名稱",
+        "iftttGetAPIKey": "獲取Webhook API密鑰",
+        "iftttNotifications": "IFTTT通知",
+        "iftttServerFailed": "IFTTT服務器連接錯誤",
+        "iftttSignup": "註冊IFTTT帳戶",
         "ignore": "忽視",
         "ignoreBackgroundTasks": "忽略後台任務警告",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "當Final Cut Pro為全屏時忽略ESC鍵",
@@ -1105,6 +1123,7 @@
         "medium": "介質",
         "memory": "記憶",
         "menuChoiceSubText": "菜單：％{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "菜單項無法成功觸發。",
         "menubarHeading": "菜單欄",
         "menubarPanelLabel": "菜單欄",
         "menubarPanelTooltip": "菜單欄偏好",
@@ -1351,9 +1370,11 @@
         "relative": "相對的",
         "reload": "刷新",
         "rememberLastQuery": "記住上次查詢",
+        "removeFavouriteKeyword": "刪除最喜歡的關鍵字",
         "removeFromList": "從列表中刪除",
         "renameButton": "重命名按鈕",
         "renameButtonQuestion": "你想把這個按鈕重命名為什麼？",
+        "renameClip": "重命名剪輯",
         "renderComplete": "渲染完成！",
         "replace": "更換",
         "replaceAll": "全部替換",
@@ -1381,6 +1402,11 @@
         "restore": "恢復",
         "restoreBrowserLayoutForSelectedCollection_title": "恢復所選集合的瀏覽器佈局",
         "restoreBrowserLayoutToMemory": "將瀏覽器佈局還原到內存",
+        "restoreHiddenKeyword": "恢復隱藏的關鍵字",
+        "revealInKeywordCollection": "顯示在關鍵字集合中",
+        "revealInKeywordCollectionAndSolo": "顯示在關鍵字收集和獨奏中",
+        "revealInKeywordCollectionAndSoloDescription": "在特定的瀏覽器關鍵字集合中顯示當前選定的時間線剪輯，並單獨顯示",
+        "revealInKeywordCollectionDescription": "顯示特定瀏覽器關鍵字集合中當前選定的時間線剪輯",
         "reverse": "相反",
         "right": "對",
         "rightClickToAssignAction": "您可以右鍵單擊此按鈕為其分配操作。",
@@ -1436,6 +1462,7 @@
         "segments": "段",
         "select": "選擇",
         "selectAFolderToSaveCSV": "請選擇要將CSV保存到的文件夾",
+        "selectActiveLibraryInBrowser": "在瀏覽器中選擇活動庫",
         "selectCompressorDestination": "選擇目標文件夾：",
         "selectCompressorSettingsFile": "選擇Compressor設置文件：",
         "selectDestinationFolder": "請選擇目標文件夾：",
@@ -1447,6 +1474,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "選擇相同故事情節中的上一個剪輯的中間部分",
         "selectRightAudioEdge": "選擇右音頻邊緣",
         "selectRightEdge": "選擇右邊緣",
+        "selectTopmostLibraryInBrowser": "在瀏覽器中選擇最頂層的庫",
         "selectVoice": "選擇語音",
         "selected": "選",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "所選剪輯不提供任何“文本對齊”選項。",
@@ -1584,6 +1612,7 @@
         "softness": "柔軟度",
         "sound": "聲音",
         "spacing": "間距",
+        "sponsorCommandPost": "贊助商指揮所",
         "stabilizationMethod": "穩定方法",
         "start": "開始",
         "startScan": "開始掃描",
