--- a/src/extensions/languages/Dutch.json
+++ b/src/extensions/languages/Dutch.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widget: Window Slider",
         "core_watchfolders_manager_label": "Beheerder: kijkmappen",
         "core_watchfolders_menuitem_label": "Kijk naar het menu-item Folder",
+        "correctSpellingAutomatically": "Spelling automatisch corrigeren",
         "cpAddNoteToSelectedClip_title": "Opmerking toevoegen aan geselecteerde clip",
         "cpAddNoteToSelectedClips_title": "Notitie toevoegen aan geselecteerde clip (s)",
         "cpAllowTasksDuringPlayback_title": "Schakelen tussen weergave tijdens weergave",
@@ -395,7 +396,7 @@
         "cpGenerator7_title": "Generator 7 toepassen",
         "cpGenerator8_title": "Generator 8 toepassen",
         "cpGenerator9_title": "Generator 9 toepassen",
-        "cpGlobalConsole_title": "Activeer de Global Console",
+        "cpGlobalConsole_title": "Activeer de zoek console",
         "cpGlobalToggleTouchBar_title": "Virtuele aanraakbalk omschakelen (wereldwijd)",
         "cpHUDSearch_title": "Schakel het HUD-zoekvenster in",
         "cpHUD_title": "HUD omschakelen",
@@ -486,7 +487,7 @@
         "cpStepMoveRight_title": "Stap verplaatsen gefocust venster: Rechts",
         "cpStepMoveUp_title": "Stap Verplaatst gefocust venster: naar boven",
         "cpStepResizeDown_title": "Stapgrootte Focussed-venster wijzigen: omlaag",
-        "cpStepResizeLeft_title": "Stapgrootte van gefocussed venster wijzigen: links",
+        "cpStepResizeLeft_title": "Stap wijzig focus venster: links",
         "cpStepResizeRight_title": "Stapgrootte Focussed-venster wijzigen: rechts",
         "cpStepResizeUp_title": "Stapgrootte van gefocust venster wijzigen: naar boven",
         "cpStreamDeck_title": "Wissel van Stream Deck",
@@ -512,7 +513,7 @@
         "cpTransition2_title": "Overgang 2 toepassen",
         "cpTransition3_title": "Overgang 3 toepassen",
         "cpTransition4_title": "Overgang 4 toepassen",
-        "cpTransition5_title": "Overgang 5 toepassen",
+        "cpTransition5_title": "Transitie 5 toepassen",
         "cpTransition6_title": "Overgang 6 toepassen",
         "cpTransition7_title": "Overgang 7 toepassen",
         "cpTransition8_title": "Overgang 8 toepassen",
@@ -665,6 +666,7 @@
         "favorites": "favorieten",
         "favourite": "Favoriete",
         "favouriteFolderError": "Er is momenteel geen favoriete map opgeslagen voor deze actie.\n\nSla een favoriete map op voor deze actie en probeer het opnieuw.",
+        "favouriteKeyword": "Favoriete trefwoord",
         "favourites": "favorieten",
         "fcpMediaFolderCancel": "Annuleer",
         "fcpMediaFolderImport": "Importeren",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "Browser: lay-outs opslaan en herstellen",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: plakbordmarkeerders om te knippen",
         "finalcutpro_browser_playhead_label": "Browser: functies van de Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Browser: selecteer Bibliotheek",
         "finalcutpro_browser_soloclip_label": "Browser: Solo Clip",
         "finalcutpro_commands_actions_label": "Opdrachten Acties",
         "finalcutpro_commands_label": "Final Cut Pro-toetsenbordopdrachten",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI-regelaars: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "MIDI-regelaars: tijdlijnzoom",
         "finalcutpro_midi_manager_label": "Beheerder: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Meldingen: IFTTT",
         "finalcutpro_notifications_imessage_label": "Meldingen: iMessage",
         "finalcutpro_notifications_manager_label": "Beheerder: meldingen",
         "finalcutpro_notifications_prowl_label": "Meldingen: Prowl",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "Voorkeuren: Algemeen",
         "finalcutpro_preferences_manager_label": "Voorkeuren: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Voorkeuren: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Voorkeuren: Spelling",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Niet-ondersteunde versiecontrole",
         "finalcutpro_streamdeck_label": "Streamdeck",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "Tekst plakbord geschiedenis",
         "global_screencapture_action": "Schermopname",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "snippets",
         "global_streamDeckbanks_action": "Stream Deck-banken",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
@@ -938,6 +944,10 @@
         "goToBeginning": "Ga naar begin",
         "goToColorInspector": "Ga naar Color Inspector",
         "goToEnd": "Ga naar einde",
+        "goToNextFrameWithMutedAudio": "Ga naar volgend frame (met gedempte audio)",
+        "goToNextFrameWithMutedAudioDescription": "Verplaats de afspeelkop naar het volgende frame met gedempte audio.",
+        "goToPreviousFrameWithMutedAudio": "Ga naar vorig frame (met gedempte audio)",
+        "goToPreviousFrameWithMutedAudioDescription": "Verplaats de afspeelkop naar het vorige frame met gedempte audio.",
         "goToRangeEnd": "Ga naar Range End",
         "goToRangeStart": "Ga naar Range Start",
         "gradient": "helling",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "Help CommandPost vertalen",
         "helpandsupport_group": "Help en ondersteuning",
         "hiddenFinalCutProPreferences": "Voorkeuren voor Final Cut Pro verborgen",
+        "hideKeyword": "Trefwoord verbergen",
         "hideRejected": "Verstoten afgewezen",
         "high": "hoog",
         "highlightPlayhead": "Markeer Playhead",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage-meldingen",
         "icon": "Icoon",
         "identification": "Identificatie",
+        "iftttAPIKey": "Webhook API-sleutel",
+        "iftttEnableNotifications": "IFTTT-integratie inschakelen",
+        "iftttEventName": "Webhook gebeurtenisnaam",
+        "iftttGetAPIKey": "Download Webhook API Key",
+        "iftttNotifications": "IFTTT-meldingen",
+        "iftttServerFailed": "IFTTT Serververbindingsfout",
+        "iftttSignup": "Meld u aan voor een IFTTT-account",
         "ignore": "Negeren",
         "ignoreBackgroundTasks": "Negeer achtergrondtaken Waarschuwing",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Negeer de ESC-toets wanneer Final Cut Pro op volledig scherm is",
@@ -1110,6 +1128,7 @@
         "medium": "Medium",
         "memory": "Geheugen",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Het menu-item kan niet succesvol worden geactiveerd.",
         "menubarHeading": "Menubalk",
         "menubarPanelLabel": "Menubalk",
         "menubarPanelTooltip": "Voorkeuren voor menubalk",
@@ -1355,11 +1374,13 @@
         "refreshMidi": "Vernieuw MIDI-apparaten",
         "rejected": "Verworpen",
         "relative": "Familielid",
-        "reload": "vernieuwen",
+        "reload": "Vernieuwen",
         "rememberLastQuery": "Laatste zoekopdracht onthouden",
+        "removeFavouriteKeyword": "Favoriet trefwoord verwijderen",
         "removeFromList": "Verwijder van Lijst",
         "renameButton": "Naam knop wijzigen",
         "renameButtonQuestion": "Waar wilt u deze knop naartoe hernoemen?",
+        "renameClip": "Naam van clip wijzigen",
         "renderComplete": "Renderen voltooid!",
         "replace": "Vervangen",
         "replaceAll": "Vervang alles",
@@ -1387,6 +1408,11 @@
         "restore": "Herstellen",
         "restoreBrowserLayoutForSelectedCollection_title": "Herstel Browser Layout voor geselecteerde verzameling",
         "restoreBrowserLayoutToMemory": "Herstel de lay-out van de browser naar het geheugen",
+        "restoreHiddenKeyword": "Herstel verborgen trefwoord",
+        "revealInKeywordCollection": "Onthullen in Trefwoordverzameling",
+        "revealInKeywordCollectionAndSolo": "Onthullen in Keyword Collection & Solo",
+        "revealInKeywordCollectionAndSoloDescription": "Onthult de huidig geselecteerde tijdlijnclip in een specifieke Browser Keyword Collection & solo's it",
+        "revealInKeywordCollectionDescription": "Onthult de momenteel geselecteerde tijdlijnclip in een specifieke Browser-trefwoordcollectie",
         "reverse": "Omgekeerde",
         "right": "Rechts",
         "rightClickToAssignAction": "U kunt met de rechtermuisknop op deze knop klikken om er een actie aan toe te wijzen.",
@@ -1444,6 +1470,7 @@
         "segments": "segmenten",
         "select": "kiezen",
         "selectAFolderToSaveCSV": "Selecteer een map om de CSV op te slaan",
+        "selectActiveLibraryInBrowser": "Selecteer Actieve bibliotheek in browser",
         "selectCompressorDestination": "Selecteer een doelmap:",
         "selectCompressorSettingsFile": "Selecteer een Compressor Instellingen Bestand:",
         "selectDestinationFolder": "Selecteer alstublieft een bestemmingsmap:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Selecteer Midden van vorige clip in dezelfde verhaallijn",
         "selectRightAudioEdge": "Selecteer Right Audio Edge",
         "selectRightEdge": "Selecteer Rechterrand",
+        "selectTopmostLibraryInBrowser": "Selecteer de bovenste bibliotheek in de browser",
         "selectVoice": "Selecteer Spraak",
         "selected": "Geselecteerd",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "De geselecteerde clip biedt geen opties voor tekstuitlijning.",
@@ -1563,7 +1591,7 @@
         "shortcutCouldNotBeTriggered": "Deze snelkoppeling kan niet worden geactiveerd.\n\nControleer of je geldige sneltoetsen hebt toegewezen aan de opdracht die je hebt geprobeerd te activeren in de Final Cut Pro Command Editor en probeer het opnieuw.",
         "shortcutDuplicateError": "U kunt dezelfde sneltoets niet gebruiken voor meerdere opdrachten.",
         "shortcutKeys": "Sneltoetsen",
-        "shortcutPleaseTryAgain": "Selecteer een nieuwe combinatie van sleutel en / of modifier en probeer het opnieuw.",
+        "shortcutPleaseTryAgain": "Selecteer een andere combinatie van toets en / of modifier en probeer het opnieuw.",
         "shortcut_group_fcpx": "Final Cut Pro",
         "shortcut_group_global": "Alle toepassingen",
         "shortcutsGroup": "Groep",
@@ -1606,6 +1634,7 @@
         "softness": "Zachtheid",
         "sound": "Geluid",
         "spacing": "tussenruimte",
+        "sponsorCommandPost": "Sponsor CommandPost",
         "stabilizationMethod": "Stabilisatie methode",
         "start": "Begin",
         "startScan": "Start scan",
@@ -1733,7 +1762,7 @@
         "types": "Types",
         "unassigned": "Niet-toegewezen",
         "undo": "ongedaan maken",
-        "uninstall": "Uninstall",
+        "uninstall": "Ongedaan maken",
         "unknown": "Onbekend",
         "unknownError": "Onbekende fout",
         "unmountExternalDrives_title": "Externe schijven ontkoppelen",
