--- a/src/extensions/languages/Hindi.json
+++ b/src/extensions/languages/Hindi.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "विजेट: विंडो स्लाइडर",
         "core_watchfolders_manager_label": "मैनेजर: वॉच फ़ोल्डर्स",
         "core_watchfolders_menuitem_label": "फ़ोल्डर मेनू आइटम देखें",
+        "correctSpellingAutomatically": "सही वर्तनी स्वचालित रूप से",
         "cpAddNoteToSelectedClip_title": "चयनित क्लिप को नोट जोड़ें",
         "cpAddNoteToSelectedClips_title": "चयनित क्लिप में नोट जोड़ें",
         "cpAllowTasksDuringPlayback_title": "प्लेबैक के दौरान रेंडरिंग टॉगल करें",
@@ -665,6 +666,7 @@
         "favorites": "पसंदीदा",
         "favourite": "पसंदीदा",
         "favouriteFolderError": "वर्तमान में इस क्रिया के लिए कोई पसंदीदा फ़ोल्डर सहेजा नहीं गया है।\n\nकृपया इस कार्रवाई के लिए एक पसंदीदा फ़ोल्डर सहेजें और पुनः प्रयास करें।",
+        "favouriteKeyword": "पसंदीदा कीवर्ड",
         "favourites": "पसंदीदा",
         "fcpMediaFolderCancel": "fcpMediaFolderCancel",
         "fcpMediaFolderImport": "fcpMediaFolderImport",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "ब्राउज़र: लेआउट सहेजें और पुनर्स्थापित करें",
         "finalcutpro_browser_pasteboardtomarkers_label": "finalcutpro_browser_pasteboardtomarkers_label",
         "finalcutpro_browser_playhead_label": "ब्राउज़र: प्लेहेड सुविधाएं",
+        "finalcutpro_browser_selectlibrary_label": "ब्राउज़र: लाइब्रेरी का चयन करें",
         "finalcutpro_browser_soloclip_label": "ब्राउज़र: सोलो क्लिप",
         "finalcutpro_commands_actions_label": "आदेश कार्य",
         "finalcutpro_commands_label": "फाइनल कट प्रो कीबोर्ड कमांड",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "finalcutpro_midi_controls_video_label",
         "finalcutpro_midi_controls_zoom_label": "MIDI नियंत्रण: टाइमलाइन ज़ूम",
         "finalcutpro_midi_manager_label": "प्रबंधक: MIDI",
+        "finalcutpro_notifications_ifttt_label": "सूचनाएं: IFTTT",
         "finalcutpro_notifications_imessage_label": "सूचनाएं: iMessage",
         "finalcutpro_notifications_manager_label": "प्रबंधक: सूचनाएं",
         "finalcutpro_notifications_prowl_label": "सूचनाएं: चोर",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "finalcutpro_preferences_general_label",
         "finalcutpro_preferences_manager_label": "प्राथमिकताएं: पैनल मैनेजर",
         "finalcutpro_preferences_scanfinalcutpro_label": "वरीयताएँ: स्कैन अंतिम कट प्रो",
+        "finalcutpro_preferences_spelling_label": "प्राथमिकताएं: वर्तनी",
         "finalcutpro_setup_scan_label": "finalcutpro_setup_scan_label",
         "finalcutpro_setup_unsupportedversion_label": "सेटअप: असमर्थित संस्करण चेक करें",
         "finalcutpro_streamdeck_label": "स्ट्रीम डेक",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "पाठ पेस्टबोर्ड इतिहास",
         "global_screencapture_action": "स्क्रीन कैप्चर",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "स्निपेट्स",
         "global_streamDeckbanks_action": "स्ट्रीम डेक बैंकों",
         "global_touchbarbanks_action": "टच बार बैंक",
         "global_widgets_action": "ग्लोबल टच बार विजेट्स",
@@ -938,6 +944,10 @@
         "goToBeginning": "goToBeginning",
         "goToColorInspector": "goToColorInspector",
         "goToEnd": "goToEnd",
+        "goToNextFrameWithMutedAudio": "नेक्स्ट फ्रेम पर जाएं (म्यूट ऑडियो के साथ)",
+        "goToNextFrameWithMutedAudioDescription": "म्यूटेड ऑडियो के साथ प्लेहेड को अगले फ्रेम पर ले जाएं।",
+        "goToPreviousFrameWithMutedAudio": "पिछले फ़्रेम पर जाएं (मौन ऑडियो के साथ)",
+        "goToPreviousFrameWithMutedAudioDescription": "म्यूटेड ऑडियो के साथ पिछले फ्रेम में प्लेहेड ले जाएं।",
         "goToRangeEnd": "goToRangeEnd",
         "goToRangeStart": "goToRangeStart",
         "gradient": "ढाल",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "ट्रांसलेशन कमांडपोस्ट में मदद करें",
         "helpandsupport_group": "मदद समर्थन",
         "hiddenFinalCutProPreferences": "छिपे हुए अंतिम कट प्रो वरीयताएँ",
+        "hideKeyword": "कीवर्ड छिपाएं",
         "hideRejected": "रिजेक्ट कर दिया",
         "high": "उच्च",
         "highlightPlayhead": "हाइलाइट प्लेहेड",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage अधिसूचनाएं",
         "icon": "चिह्न",
         "identification": "पहचान",
+        "iftttAPIKey": "Webhook एपीआई कुंजी",
+        "iftttEnableNotifications": "IFTTT एकीकरण सक्षम करें",
+        "iftttEventName": "Webhook घटना का नाम",
+        "iftttGetAPIKey": "Webhook API कुंजी प्राप्त करें",
+        "iftttNotifications": "IFTTT सूचनाएं",
+        "iftttServerFailed": "IFTTT सर्वर कनेक्शन त्रुटि",
+        "iftttSignup": "एक IFTTT खाते के लिए साइन अप करें",
         "ignore": "नज़रअंदाज़ करना",
         "ignoreBackgroundTasks": "पृष्ठभूमि कार्य चेतावनी पर ध्यान न दें",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "ignoreESCKeyWhenFinalCutProIsFullscreen",
@@ -1110,6 +1128,7 @@
         "medium": "मध्यम",
         "memory": "याद",
         "menuChoiceSubText": "मेनू: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "मेनू आइटम को सफलतापूर्वक ट्रिगर नहीं किया जा सका।",
         "menubarHeading": "मेनू पट्टी",
         "menubarPanelLabel": "मेनू पट्टी",
         "menubarPanelTooltip": "मेनूबार प्राथमिकताएं",
@@ -1357,9 +1376,11 @@
         "relative": "सापेक्ष",
         "reload": "सीमा से अधिक लादना",
         "rememberLastQuery": "अंतिम प्रश्न याद रखें",
+        "removeFavouriteKeyword": "पसंदीदा कीवर्ड निकालें",
         "removeFromList": "सूची से निकालें",
         "renameButton": "बटन का नाम बदलें",
         "renameButtonQuestion": "क्या आप इस बटन का नाम बदलना चाहेंगे?",
+        "renameClip": "क्लिप का नाम बदलें",
         "renderComplete": "पूरा प्रस्तुत करें!",
         "replace": "बदलने के",
         "replaceAll": "सबको बदली करें",
@@ -1387,6 +1408,11 @@
         "restore": "बहाल",
         "restoreBrowserLayoutForSelectedCollection_title": "चयनित संग्रह के लिए ब्राउज़र लेआउट पुनर्स्थापित करें",
         "restoreBrowserLayoutToMemory": "मेमोरी के लिए ब्राउज़र लेआउट पुनर्स्थापित करें",
+        "restoreHiddenKeyword": "छिपे हुए कीवर्ड को पुनर्स्थापित करें",
+        "revealInKeywordCollection": "कीवर्ड संग्रह में पता चलता है",
+        "revealInKeywordCollectionAndSolo": "कीवर्ड कलेक्शन और सोलो में खुलासा",
+        "revealInKeywordCollectionAndSoloDescription": "एक विशिष्ट ब्राउज़र कीवर्ड संग्रह और एकल में वर्तमान में चयनित समयरेखा क्लिप का खुलासा करता है",
+        "revealInKeywordCollectionDescription": "एक विशिष्ट ब्राउज़र कीवर्ड संग्रह में वर्तमान में चयनित समयरेखा क्लिप को प्रकट करता है",
         "reverse": "उलटा",
         "right": "सही",
         "rightClickToAssignAction": "आप इस पर क्लिक करके राइट टू एक्शन असाइन कर सकते हैं।",
@@ -1444,6 +1470,7 @@
         "segments": "खंडों",
         "select": "चुनते हैं",
         "selectAFolderToSaveCSV": "कृपया CSV को सहेजने के लिए एक फ़ोल्डर का चयन करें",
+        "selectActiveLibraryInBrowser": "ब्राउज़र में सक्रिय लाइब्रेरी का चयन करें",
         "selectCompressorDestination": "एक गंतव्य फ़ोल्डर का चयन करें:",
         "selectCompressorSettingsFile": "एक कंप्रेसर सेटिंग्स फ़ाइल का चयन करें:",
         "selectDestinationFolder": "कृपया एक गंतव्य फ़ोल्डर चुनें:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "उसी स्टोरीलाइन में पिछले क्लिप के मध्य का चयन करें",
         "selectRightAudioEdge": "selectRightAudioEdge",
         "selectRightEdge": "selectRightEdge",
+        "selectTopmostLibraryInBrowser": "ब्राउज़र में सबसे ऊपर की लाइब्रेरी का चयन करें",
         "selectVoice": "वॉयस का चयन करें",
         "selected": "चुन लिया",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "चयनित क्लिप कोई पाठ संरेखण विकल्प प्रदान नहीं करता है।",
@@ -1606,6 +1634,7 @@
         "softness": "मृदुता",
         "sound": "ध्वनि",
         "spacing": "अंतर",
+        "sponsorCommandPost": "प्रायोजक कमांडपोस्ट",
         "stabilizationMethod": "स्थिरीकरण विधि",
         "start": "प्रारंभ",
         "startScan": "स्कैन शुरू करें",
