--- a/src/extensions/languages/Japanese.json
+++ b/src/extensions/languages/Japanese.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "ウィジェット：ウィンドウスライダ",
         "core_watchfolders_manager_label": "マネージャー：ウォッチフォルダ",
         "core_watchfolders_menuitem_label": "ウォッチフォルダメニュー項目",
+        "correctSpellingAutomatically": "スペルを自動的に修正する",
         "cpAddNoteToSelectedClip_title": "選択したクリップにノートを追加する",
         "cpAddNoteToSelectedClips_title": "選択したクリップにメモを追加",
         "cpAllowTasksDuringPlayback_title": "再生中にレンダリングを切り替える",
@@ -664,6 +665,7 @@
         "favorites": "お気に入り",
         "favourite": "お気に入り",
         "favouriteFolderError": "このアクションのために現在保存されているお気に入りのフォルダはありません。\n\nこのアクションのためにお気に入りのフォルダーを保存して、再試行してください。",
+        "favouriteKeyword": "好きなキーワード",
         "favourites": "お気に入り",
         "fcpMediaFolderCancel": "キャンセル",
         "fcpMediaFolderImport": "インポート",
@@ -736,6 +738,7 @@
         "finalcutpro_browser_layouts_label": "ブラウザ：レイアウトの保存と復元",
         "finalcutpro_browser_pasteboardtomarkers_label": "ブラウザ：クリップボードに貼り付けるマーカー",
         "finalcutpro_browser_playhead_label": "ブラウザ：再生ヘッドの機能",
+        "finalcutpro_browser_selectlibrary_label": "ブラウザ：ライブラリを選択",
         "finalcutpro_browser_soloclip_label": "ブラウザ：ソロクリップ",
         "finalcutpro_commands_actions_label": "コマンドアクション",
         "finalcutpro_commands_label": "Final Cut Proキーボードコマンド",
@@ -794,6 +797,7 @@
         "finalcutpro_midi_controls_video_label": "MIDIコントロール：ビデオインスペクタ",
         "finalcutpro_midi_controls_zoom_label": "MIDIコントロール：タイムラインズーム",
         "finalcutpro_midi_manager_label": "マネージャー：MIDI",
+        "finalcutpro_notifications_ifttt_label": "通知：IFTTT",
         "finalcutpro_notifications_imessage_label": "通知：iMessage",
         "finalcutpro_notifications_manager_label": "マネージャー：通知",
         "finalcutpro_notifications_prowl_label": "お知らせ：Prowl",
@@ -806,6 +810,7 @@
         "finalcutpro_preferences_general_label": "設定：一般",
         "finalcutpro_preferences_manager_label": "設定：パネルマネージャ",
         "finalcutpro_preferences_scanfinalcutpro_label": "環境設定：Final Cut Proをスキャンする",
+        "finalcutpro_preferences_spelling_label": "設定：スペル",
         "finalcutpro_setup_scan_label": "セットアップ：Final Cut Proプラグインスキャン",
         "finalcutpro_setup_unsupportedversion_label": "セットアップ：サポートされていないバージョンチェック",
         "finalcutpro_streamdeck_label": "ストリームデッキ",
@@ -926,6 +931,7 @@
         "global_pasteboard_action": "テキストペーストボードの履歴",
         "global_screencapture_action": "画面キャプチャ",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "スニペット",
         "global_streamDeckbanks_action": "ストリームデッキバンク",
         "global_touchbarbanks_action": "タッチバーバンク",
         "global_widgets_action": "グローバルタッチバーウィジェット",
@@ -934,6 +940,10 @@
         "goToBeginning": "始まりに行く",
         "goToColorInspector": "カラーインスペクタに移動",
         "goToEnd": "終わりに行く",
+        "goToNextFrameWithMutedAudio": "次のフレームに移動（音声をミュート）",
+        "goToNextFrameWithMutedAudioDescription": "ミュートされたオーディオを含む次のフレームに再生ヘッドを移動します。",
+        "goToPreviousFrameWithMutedAudio": "前のフレームに移動（音声をミュート）",
+        "goToPreviousFrameWithMutedAudioDescription": "オーディオをミュートして、再生ヘッドを前のフレームに移動します。",
         "goToRangeEnd": "レンジエンドに移動",
         "goToRangeStart": "範囲開始に移動",
         "gradient": "勾配",
@@ -951,6 +961,7 @@
         "helpTranslateCommandPost": "CommandPostの翻訳を支援",
         "helpandsupport_group": "ヘルプサポート",
         "hiddenFinalCutProPreferences": "非表示のFinal Cut Pro設定",
+        "hideKeyword": "キーワードを隠す",
         "hideRejected": "非表示を非表示",
         "high": "高い",
         "highlightPlayhead": "再生ヘッドをハイライト",
@@ -984,6 +995,13 @@
         "iMessageNotifications": "iMessage通知",
         "icon": "アイコン",
         "identification": "識別",
+        "iftttAPIKey": "Webhook APIキー",
+        "iftttEnableNotifications": "IFTTT統合を有効にする",
+        "iftttEventName": "Webhookイベント名",
+        "iftttGetAPIKey": "Webhook APIキーを取得する",
+        "iftttNotifications": "IFTTT通知",
+        "iftttServerFailed": "IFTTTサーバー接続エラー",
+        "iftttSignup": "IFTTTアカウントのサインアップ",
         "ignore": "無視する",
         "ignoreBackgroundTasks": "バックグラウンドタスクの警告を無視",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Final Cut ProがフルスクリーンのときにESCキーを無視する",
@@ -1105,6 +1123,7 @@
         "medium": "中",
         "memory": "メモリ",
         "menuChoiceSubText": "メニュー：％{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "メニュー項目を正常にトリガーできませんでした。",
         "menubarHeading": "メニューバー",
         "menubarPanelLabel": "メニューバー",
         "menubarPanelTooltip": "メニューバーの設定",
@@ -1351,9 +1370,11 @@
         "relative": "相対",
         "reload": "リロード",
         "rememberLastQuery": "最後のクエリを記憶する",
+        "removeFavouriteKeyword": "お気に入りのキーワードを削除",
         "removeFromList": "リストから削除する",
         "renameButton": "名前変更ボタン",
         "renameButtonQuestion": "このボタンの名前を変更しますか？",
+        "renameClip": "クリップの名前を変更",
         "renderComplete": "レンダリング完了！",
         "replace": "交換",
         "replaceAll": "すべて置換",
@@ -1381,6 +1402,11 @@
         "restore": "リストア",
         "restoreBrowserLayoutForSelectedCollection_title": "選択したコレクションのブラウザレイアウトを復元する",
         "restoreBrowserLayoutToMemory": "ブラウザレイアウトをメモリに復元",
+        "restoreHiddenKeyword": "非表示のキーワードを復元",
+        "revealInKeywordCollection": "キーワードコレクションで明らかにする",
+        "revealInKeywordCollectionAndSolo": "キーワードコレクションとソロで明らかにする",
+        "revealInKeywordCollectionAndSoloDescription": "特定のブラウザキーワードコレクションで現在選択されているタイムラインクリップを表示し、ソロにします",
+        "revealInKeywordCollectionDescription": "特定のブラウザキーワードコレクションで現在選択されているタイムラインクリップを表示します",
         "reverse": "逆",
         "right": "右",
         "rightClickToAssignAction": "このボタンを右クリックして、アクションを割り当てることができます。",
@@ -1436,6 +1462,7 @@
         "segments": "セグメント",
         "select": "選択",
         "selectAFolderToSaveCSV": "CSVを保存するフォルダーを選択してください",
+        "selectActiveLibraryInBrowser": "ブラウザでアクティブなライブラリを選択",
         "selectCompressorDestination": "デスティネーションフォルダを選択：",
         "selectCompressorSettingsFile": "コンプレッサー設定ファイルを選択：",
         "selectDestinationFolder": "宛先フォルダを選択してください：",
@@ -1447,6 +1474,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "同じストーリーラインの前のクリップの中央を選択",
         "selectRightAudioEdge": "右オーディオエッジを選択",
         "selectRightEdge": "右エッジを選択",
+        "selectTopmostLibraryInBrowser": "ブラウザで最上位のライブラリを選択",
         "selectVoice": "音声を選択",
         "selected": "選択済み",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "選択したクリップには、テキストの配置オプションがありません。",
@@ -1584,6 +1612,7 @@
         "softness": "柔らかさ",
         "sound": "音",
         "spacing": "間隔",
+        "sponsorCommandPost": "スポンサーCommandPost",
         "stabilizationMethod": "安定化方法",
         "start": "開始",
         "startScan": "スキャン開始",
