--- a/src/extensions/languages/Korean.json
+++ b/src/extensions/languages/Korean.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "위젯 : 창 슬라이더",
         "core_watchfolders_manager_label": "관리자 : 감시 폴더",
         "core_watchfolders_menuitem_label": "감시 폴더 메뉴 항목",
+        "correctSpellingAutomatically": "자동 맞춤법",
         "cpAddNoteToSelectedClip_title": "선택한 클립에 메모 추가",
         "cpAddNoteToSelectedClips_title": "선택한 클립에 메모 추가",
         "cpAllowTasksDuringPlayback_title": "재생 중 렌더링 토글",
@@ -664,6 +665,7 @@
         "favorites": "즐겨 찾기",
         "favourite": "인기 있는 말",
         "favouriteFolderError": "이 작업에 대해 현재 저장된 즐겨 찾기 폴더가 없습니다.\n\n이 작업에 대한 즐겨 찾기 폴더를 저장하고 다시 시도하십시오.",
+        "favouriteKeyword": "좋아하는 키워드",
         "favourites": "즐겨 찾기",
         "fcpMediaFolderCancel": "취소",
         "fcpMediaFolderImport": "수입",
@@ -736,6 +738,7 @@
         "finalcutpro_browser_layouts_label": "브라우저 : 레이아웃 저장 및 복원",
         "finalcutpro_browser_pasteboardtomarkers_label": "브라우저 : 클립 보드에 붙여 넣기",
         "finalcutpro_browser_playhead_label": "브라우저 : 재생 헤드 기능",
+        "finalcutpro_browser_selectlibrary_label": "브라우저 : 라이브러리 선택",
         "finalcutpro_browser_soloclip_label": "브라우저 : Solo Clip",
         "finalcutpro_commands_actions_label": "명령 동작",
         "finalcutpro_commands_label": "Final Cut Pro 키보드 명령",
@@ -794,6 +797,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI 컨트롤 : 비디오 인스펙터",
         "finalcutpro_midi_controls_zoom_label": "MIDI 컨트롤 : 타임 라인 줌",
         "finalcutpro_midi_manager_label": "관리자 : MIDI",
+        "finalcutpro_notifications_ifttt_label": "알림 : IFTTT",
         "finalcutpro_notifications_imessage_label": "알림 : iMessage",
         "finalcutpro_notifications_manager_label": "관리자 : 알림",
         "finalcutpro_notifications_prowl_label": "알림 : Prowl",
@@ -806,6 +810,7 @@
         "finalcutpro_preferences_general_label": "환경 설정 : 일반",
         "finalcutpro_preferences_manager_label": "환경 설정 : 패널 관리자",
         "finalcutpro_preferences_scanfinalcutpro_label": "기본 설정 : Final Cut Pro 스캔",
+        "finalcutpro_preferences_spelling_label": "환경 설정 : 맞춤법",
         "finalcutpro_setup_scan_label": "설정 : Final Cut Pro 플러그인 스캔",
         "finalcutpro_setup_unsupportedversion_label": "설정 : 지원되지 않는 버전 확인",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -926,6 +931,7 @@
         "global_pasteboard_action": "텍스트 대지 기록",
         "global_screencapture_action": "화면 캡처",
         "global_scripts_action": "애플 스크립트",
+        "global_snippets_action": "짧은 발췌",
         "global_streamDeckbanks_action": "Stream Deck 뱅크",
         "global_touchbarbanks_action": "터치 바 뱅크",
         "global_widgets_action": "글로벌 터치 바 위젯",
@@ -934,6 +940,10 @@
         "goToBeginning": "시작으로 이동",
         "goToColorInspector": "색상 검사기로 이동",
         "goToEnd": "끝으로 이동",
+        "goToNextFrameWithMutedAudio": "다음 프레임으로 이동 (음소거 된 오디오 포함)",
+        "goToNextFrameWithMutedAudioDescription": "음소거 된 오디오를 사용하여 재생 헤드를 다음 프레임으로 이동하십시오.",
+        "goToPreviousFrameWithMutedAudio": "이전 프레임으로 이동 (음소거 된 오디오 포함)",
+        "goToPreviousFrameWithMutedAudioDescription": "음소거 된 오디오를 사용하여 재생 헤드를 이전 프레임으로 이동하십시오.",
         "goToRangeEnd": "범위 끝으로 이동",
         "goToRangeStart": "범위 시작으로 이동",
         "gradient": "구배",
@@ -951,6 +961,7 @@
         "helpTranslateCommandPost": "CommandPost 번역 도움말",
         "helpandsupport_group": "도움말 및 지원",
         "hiddenFinalCutProPreferences": "숨겨진 Final Cut Pro 기본 설정",
+        "hideKeyword": "키워드 숨기기",
         "hideRejected": "거부 된 숨기기",
         "high": "높은",
         "highlightPlayhead": "재생 헤드 하이라이트",
@@ -984,6 +995,13 @@
         "iMessageNotifications": "iMessage 알림",
         "icon": "상",
         "identification": "신분증",
+        "iftttAPIKey": "웹 후크 API 키",
+        "iftttEnableNotifications": "IFTTT 통합 활성화",
+        "iftttEventName": "웹 후크 이벤트 이름",
+        "iftttGetAPIKey": "Webhook API 키 받기",
+        "iftttNotifications": "IFTTT 알림",
+        "iftttServerFailed": "IFTTT 서버 연결 오류",
+        "iftttSignup": "IFTTT 계정 가입",
         "ignore": "무시",
         "ignoreBackgroundTasks": "백그라운드 작업 무시 경고",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Final Cut Pro가 전체 화면 인 경우 ESC 키 무시",
@@ -1105,6 +1123,7 @@
         "medium": "매질",
         "memory": "기억",
         "menuChoiceSubText": "메뉴 : % {path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "메뉴 항목을 성공적으로 트리거 할 수 없습니다.",
         "menubarHeading": "메뉴 바",
         "menubarPanelLabel": "메뉴 바",
         "menubarPanelTooltip": "메뉴 바 환경 설정",
@@ -1351,9 +1370,11 @@
         "relative": "상대적인",
         "reload": "새로 고침",
         "rememberLastQuery": "마지막 검색어 기억",
+        "removeFavouriteKeyword": "즐겨 찾는 키워드 제거",
         "removeFromList": "목록에서 제거하다",
         "renameButton": "이름 바꾸기 버튼",
         "renameButtonQuestion": "이 버튼의 이름을 무엇으로 바꾸시겠습니까?",
+        "renameClip": "클립 이름 바꾸기",
         "renderComplete": "렌더 완료!",
         "replace": "바꾸다",
         "replaceAll": "전부 교체",
@@ -1381,6 +1402,11 @@
         "restore": "복원",
         "restoreBrowserLayoutForSelectedCollection_title": "선택한 컬렉션에 대한 브라우저 레이아웃 복원",
         "restoreBrowserLayoutToMemory": "브라우저 레이아웃을 메모리로 복원",
+        "restoreHiddenKeyword": "숨겨진 키워드 복원",
+        "revealInKeywordCollection": "키워드 수집 공개",
+        "revealInKeywordCollectionAndSolo": "키워드 수집 및 솔로 공개",
+        "revealInKeywordCollectionAndSoloDescription": "특정 브라우저 키워드 컬렉션에서 현재 선택된 타임 라인 클립을 표시합니다.",
+        "revealInKeywordCollectionDescription": "특정 브라우저 키워드 모음에서 현재 선택된 타임 라인 클립을 표시합니다",
         "reverse": "역",
         "right": "권리",
         "rightClickToAssignAction": "이 버튼을 마우스 오른쪽 버튼으로 클릭하여 작업을 할당 할 수 있습니다.",
@@ -1436,6 +1462,7 @@
         "segments": "세그먼트",
         "select": "고르다",
         "selectAFolderToSaveCSV": "CSV를 저장할 폴더를 선택하십시오",
+        "selectActiveLibraryInBrowser": "브라우저에서 활성 라이브러리를 선택하십시오.",
         "selectCompressorDestination": "대상 폴더를 선택하십시오.",
         "selectCompressorSettingsFile": "압축기 설정 파일을 선택하십시오.",
         "selectDestinationFolder": "대상 폴더를 선택하십시오 :",
@@ -1447,6 +1474,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "동일한 스토리에서 이전 클립의 중간을 선택하십시오",
         "selectRightAudioEdge": "오른쪽 오디오 에지를 선택하십시오",
         "selectRightEdge": "오른쪽 가장자리를 선택하십시오",
+        "selectTopmostLibraryInBrowser": "브라우저에서 최상위 라이브러리를 선택하십시오.",
         "selectVoice": "음성 선택",
         "selected": "선택된",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "선택한 클립은 텍스트 정렬 옵션을 제공하지 않습니다.",
@@ -1584,6 +1612,7 @@
         "softness": "연성",
         "sound": "소리",
         "spacing": "간격",
+        "sponsorCommandPost": "스폰서 커맨드 포스트",
         "stabilizationMethod": "안정화 방법",
         "start": "스타트",
         "startScan": "스캔을 시작하다",
