--- a/src/extensions/languages/Malayalam.json
+++ b/src/extensions/languages/Malayalam.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "വിജറ്റ്: വിൻഡോ സ്ലൈഡർ",
         "core_watchfolders_manager_label": "മാനേജർ: വാച്ച് ഫോൾഡറുകൾ",
         "core_watchfolders_menuitem_label": "ഫോൾഡർ മെനു ഇനം കാണുക",
+        "correctSpellingAutomatically": "അക്ഷരവിന്യാസം യാന്ത്രികമായി ശരിയാക്കുക",
         "cpAddNoteToSelectedClip_title": "തിരഞ്ഞെടുത്ത ക്ലിപ്പിലേക്ക് കുറിപ്പ് ചേർക്കുക",
         "cpAddNoteToSelectedClips_title": "തിരഞ്ഞെടുത്ത ക്ലിപ്പിലേക്ക് (കളിലേക്ക്) കുറിപ്പ് ചേർക്കുക",
         "cpAllowTasksDuringPlayback_title": "പ്ലേബാക്ക് സമയത്ത് റെൻഡറിംഗ് ടോഗിൾ ചെയ്യുക",
@@ -665,6 +666,7 @@
         "favorites": "പ്രിയങ്കരങ്ങൾ",
         "favourite": "പ്രിയപ്പെട്ടവ",
         "favouriteFolderError": "ഈ പ്രവർത്തനത്തിനായി നിലവിൽ പ്രിയപ്പെട്ട ഫോൾഡറുകളൊന്നും സംരക്ഷിച്ചിട്ടില്ല.\n\nഈ പ്രവർത്തനത്തിനായി ഒരു പ്രിയപ്പെട്ട ഫോൾഡർ സംരക്ഷിച്ച് വീണ്ടും ശ്രമിക്കുക.",
+        "favouriteKeyword": "പ്രിയപ്പെട്ട കീവേഡ്",
         "favourites": "പ്രിയങ്കരങ്ങൾ",
         "fcpMediaFolderCancel": "റദ്ദാക്കുക",
         "fcpMediaFolderImport": "ഇറക്കുമതി ചെയ്യുക",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "ബ്ര rowser സർ: ലേ outs ട്ടുകൾ സംരക്ഷിച്ച് പുന ore സ്ഥാപിക്കുക",
         "finalcutpro_browser_pasteboardtomarkers_label": "ബ്ര rowser സർ: ക്ലിപ്പിലേക്കുള്ള പേസ്റ്റ്ബോർഡ് മാർക്കറുകൾ",
         "finalcutpro_browser_playhead_label": "ബ്ര rowser സർ: പ്ലേഹെഡ് സവിശേഷതകൾ",
+        "finalcutpro_browser_selectlibrary_label": "ബ്ര rowser സർ: ലൈബ്രറി തിരഞ്ഞെടുക്കുക",
         "finalcutpro_browser_soloclip_label": "ബ്ര rowser സർ: സോളോ ക്ലിപ്പ്",
         "finalcutpro_commands_actions_label": "കമാൻഡുകൾ പ്രവർത്തനങ്ങൾ",
         "finalcutpro_commands_label": "അന്തിമ കട്ട് പ്രോ കീബോർഡ് കമാൻഡുകൾ",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "മിഡി നിയന്ത്രണങ്ങൾ: വീഡിയോ ഇൻസ്പെക്ടർ",
         "finalcutpro_midi_controls_zoom_label": "മിഡി നിയന്ത്രണങ്ങൾ: ടൈംലൈൻ സൂം",
         "finalcutpro_midi_manager_label": "മാനേജർ: മിഡി",
+        "finalcutpro_notifications_ifttt_label": "അറിയിപ്പുകൾ: IFTTT",
         "finalcutpro_notifications_imessage_label": "അറിയിപ്പുകൾ: iMessage",
         "finalcutpro_notifications_manager_label": "മാനേജർ: അറിയിപ്പുകൾ",
         "finalcutpro_notifications_prowl_label": "അറിയിപ്പുകൾ: പ്രോൾ",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "മുൻ‌ഗണനകൾ: പൊതുവായ",
         "finalcutpro_preferences_manager_label": "മുൻ‌ഗണനകൾ: പാനൽ മാനേജർ",
         "finalcutpro_preferences_scanfinalcutpro_label": "മുൻ‌ഗണനകൾ: സ്കാൻ ഫൈനൽ കട്ട് പ്രോ",
+        "finalcutpro_preferences_spelling_label": "മുൻ‌ഗണനകൾ: അക്ഷരവിന്യാസം",
         "finalcutpro_setup_scan_label": "സജ്ജീകരണം: ഫൈനൽ കട്ട് പ്രോ പ്ലഗിൻ സ്കാൻ",
         "finalcutpro_setup_unsupportedversion_label": "സജ്ജീകരണം: പിന്തുണയ്‌ക്കാത്ത പതിപ്പ് പരിശോധന",
         "finalcutpro_streamdeck_label": "സ്ട്രീം ഡെക്ക്",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "ടെക്സ്റ്റ് പേസ്റ്റ്ബോർഡ് ചരിത്രം",
         "global_screencapture_action": "സ്‌ക്രീൻ ക്യാപ്‌ചർ",
         "global_scripts_action": "ആപ്പിൾസ്ക്രിപ്റ്റ്",
+        "global_snippets_action": "സ്‌നിപ്പെറ്റുകൾ",
         "global_streamDeckbanks_action": "സ്ട്രീം ഡെക്ക് ബാങ്കുകൾ",
         "global_touchbarbanks_action": "ടച്ച് ബാർ ബാങ്കുകൾ",
         "global_widgets_action": "ഗ്ലോബൽ ടച്ച് ബാർ വിഡ്ജറ്റുകൾ",
@@ -938,6 +944,10 @@
         "goToBeginning": "തുടക്കത്തിലേക്ക് പോകുക",
         "goToColorInspector": "കളർ ഇൻസ്പെക്ടറിലേക്ക് പോകുക",
         "goToEnd": "അവസാനത്തിലേക്ക് പോകുക",
+        "goToNextFrameWithMutedAudio": "അടുത്ത ഫ്രെയിമിലേക്ക് പോകുക (നിശബ്ദമാക്കിയ ഓഡിയോ ഉപയോഗിച്ച്)",
+        "goToNextFrameWithMutedAudioDescription": "നിശബ്ദമാക്കിയ ഓഡിയോ ഉപയോഗിച്ച് പ്ലേഹെഡ് അടുത്ത ഫ്രെയിമിലേക്ക് നീക്കുക.",
+        "goToPreviousFrameWithMutedAudio": "മുമ്പത്തെ ഫ്രെയിമിലേക്ക് പോകുക (നിശബ്ദമാക്കിയ ഓഡിയോ ഉപയോഗിച്ച്)",
+        "goToPreviousFrameWithMutedAudioDescription": "നിശബ്ദമാക്കിയ ഓഡിയോ ഉപയോഗിച്ച് പ്ലേഹെഡ് മുമ്പത്തെ ഫ്രെയിമിലേക്ക് നീക്കുക.",
         "goToRangeEnd": "റേഞ്ച് എന്റിലേക്ക് പോകുക",
         "goToRangeStart": "റേഞ്ച് ആരംഭത്തിലേക്ക് പോകുക",
         "gradient": "ഗ്രേഡിയന്റ്",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "കമാൻഡ്പോസ്റ്റ് വിവർത്തനം ചെയ്യാൻ സഹായിക്കുക",
         "helpandsupport_group": "സഹായവും പിന്തുണയും",
         "hiddenFinalCutProPreferences": "മറച്ച ഫൈനൽ കട്ട് പ്രോ മുൻഗണനകൾ",
+        "hideKeyword": "കീവേഡ് മറയ്‌ക്കുക",
         "hideRejected": "നിരസിച്ചു മറയ്‌ക്കുക",
         "high": "ഉയർന്ന",
         "highlightPlayhead": "പ്ലേഹെഡ് ഹൈലൈറ്റ് ചെയ്യുക",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage അറിയിപ്പുകൾ",
         "icon": "ഐക്കൺ",
         "identification": "തിരിച്ചറിയൽ",
+        "iftttAPIKey": "വെബ്‌ഹൂക്ക് API കീ",
+        "iftttEnableNotifications": "IFTTT സംയോജനം പ്രാപ്തമാക്കുക",
+        "iftttEventName": "വെബ്‌ഹൂക്ക് ഇവന്റ് നാമം",
+        "iftttGetAPIKey": "വെബ്‌ഹൂക്ക് API കീ നേടുക",
+        "iftttNotifications": "IFTTT അറിയിപ്പുകൾ",
+        "iftttServerFailed": "IFTTT സെർവർ കണക്ഷൻ പിശക്",
+        "iftttSignup": "ഒരു IFTTT അക്ക for ണ്ടിനായി സൈൻ അപ്പ് ചെയ്യുക",
         "ignore": "അവഗണിക്കുക",
         "ignoreBackgroundTasks": "പശ്ചാത്തല ടാസ്‌ക് മുന്നറിയിപ്പ് അവഗണിക്കുക",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "ഫൈനൽ കട്ട് പ്രോ ഫുൾസ്ക്രീൻ ആയിരിക്കുമ്പോൾ ESC കീ അവഗണിക്കുക",
@@ -1110,6 +1128,7 @@
         "medium": "ഇടത്തരം",
         "memory": "മെമ്മറി",
         "menuChoiceSubText": "മെനു: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "മെനു ഇനം വിജയകരമായി പ്രവർത്തനക്ഷമമാക്കാൻ കഴിഞ്ഞില്ല.",
         "menubarHeading": "മെനു ബാർ",
         "menubarPanelLabel": "മെനു ബാർ",
         "menubarPanelTooltip": "മെനുബാർ മുൻഗണനകൾ",
@@ -1357,9 +1376,11 @@
         "relative": "ആപേക്ഷികം",
         "reload": "വീണ്ടും ലോഡുചെയ്യുക",
         "rememberLastQuery": "അവസാന ചോദ്യം ഓർക്കുക",
+        "removeFavouriteKeyword": "പ്രിയപ്പെട്ട കീവേഡ് നീക്കംചെയ്യുക",
         "removeFromList": "പട്ടികയിൽനിന്നും ഒഴിവാക്കുക",
         "renameButton": "ബട്ടൺ പേരുമാറ്റുക",
         "renameButtonQuestion": "ഈ ബട്ടണിന്റെ പേരുമാറ്റാൻ നിങ്ങൾ എന്താണ് ആഗ്രഹിക്കുന്നത്?",
+        "renameClip": "ക്ലിപ്പിന്റെ പേരുമാറ്റുക",
         "renderComplete": "റെൻഡർ പൂർത്തിയായി!",
         "replace": "മാറ്റിസ്ഥാപിക്കുക",
         "replaceAll": "എല്ലാം മാറ്റിസ്ഥാപിക്കുക",
@@ -1387,6 +1408,11 @@
         "restore": "പുന .സ്ഥാപിക്കുക",
         "restoreBrowserLayoutForSelectedCollection_title": "തിരഞ്ഞെടുത്ത ശേഖരത്തിനായി ബ്രൗസർ ലേ Layout ട്ട് പുന ore സ്ഥാപിക്കുക",
         "restoreBrowserLayoutToMemory": "ബ്രൗസർ ലേ Layout ട്ട് മെമ്മറിയിലേക്ക് പുന ore സ്ഥാപിക്കുക",
+        "restoreHiddenKeyword": "മറച്ച കീവേഡ് പുന ore സ്ഥാപിക്കുക",
+        "revealInKeywordCollection": "കീവേഡ് ശേഖരത്തിൽ വെളിപ്പെടുത്തുക",
+        "revealInKeywordCollectionAndSolo": "കീവേഡ് ശേഖരത്തിലും സോളോയിലും വെളിപ്പെടുത്തുക",
+        "revealInKeywordCollectionAndSoloDescription": "ഒരു നിർദ്ദിഷ്ട ബ്ര rowser സർ കീവേഡ് ശേഖരത്തിൽ നിലവിൽ തിരഞ്ഞെടുത്ത ടൈംലൈൻ ക്ലിപ്പ് വെളിപ്പെടുത്തുന്നു",
+        "revealInKeywordCollectionDescription": "ഒരു നിർദ്ദിഷ്ട ബ്ര rowser സർ കീവേഡ് ശേഖരത്തിൽ നിലവിൽ തിരഞ്ഞെടുത്ത ടൈംലൈൻ ക്ലിപ്പ് വെളിപ്പെടുത്തുന്നു",
         "reverse": "വിപരീതം",
         "right": "വലത്",
         "rightClickToAssignAction": "ഇതിന് ഒരു പ്രവർത്തനം നൽകുന്നതിന് നിങ്ങൾക്ക് ഈ ബട്ടണിൽ വലത് ക്ലിക്കുചെയ്യാം.",
@@ -1444,6 +1470,7 @@
         "segments": "സെഗ്‌മെന്റുകൾ",
         "select": "തിരഞ്ഞെടുക്കുക",
         "selectAFolderToSaveCSV": "CSV സംരക്ഷിക്കുന്നതിന് ദയവായി ഒരു ഫോൾഡർ തിരഞ്ഞെടുക്കുക",
+        "selectActiveLibraryInBrowser": "ബ്രൗസറിലെ സജീവ ലൈബ്രറി തിരഞ്ഞെടുക്കുക",
         "selectCompressorDestination": "ഒരു ലക്ഷ്യസ്ഥാന ഫോൾഡർ തിരഞ്ഞെടുക്കുക:",
         "selectCompressorSettingsFile": "ഒരു കംപ്രസ്സർ ക്രമീകരണ ഫയൽ തിരഞ്ഞെടുക്കുക:",
         "selectDestinationFolder": "ഒരു ലക്ഷ്യസ്ഥാന ഫോൾഡർ തിരഞ്ഞെടുക്കുക:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "അതേ സ്റ്റോറിലൈനിൽ മുമ്പത്തെ ക്ലിപ്പിന്റെ മധ്യഭാഗം തിരഞ്ഞെടുക്കുക",
         "selectRightAudioEdge": "വലത് ഓഡിയോ എഡ്ജ് തിരഞ്ഞെടുക്കുക",
         "selectRightEdge": "വലത് എഡ്ജ് തിരഞ്ഞെടുക്കുക",
+        "selectTopmostLibraryInBrowser": "ബ്രൗസറിലെ ടോപ്പ്മോസ്റ്റ് ലൈബ്രറി തിരഞ്ഞെടുക്കുക",
         "selectVoice": "വോയ്‌സ് തിരഞ്ഞെടുക്കുക",
         "selected": "തിരഞ്ഞെടുത്തു",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "തിരഞ്ഞെടുത്ത ക്ലിപ്പ് ടെക്സ്റ്റ് വിന്യാസ ഓപ്ഷനുകളൊന്നും വാഗ്ദാനം ചെയ്യുന്നില്ല.",
@@ -1606,6 +1634,7 @@
         "softness": "മൃദുത്വം",
         "sound": "ശബ്ദം",
         "spacing": "വിടവ്",
+        "sponsorCommandPost": "സ്പോൺസർ കമാൻഡ്പോസ്റ്റ്",
         "stabilizationMethod": "സ്ഥിരത രീതി",
         "start": "ആരംഭിക്കുക",
         "startScan": "സ്കാൻ ആരംഭിക്കുക",
