--- a/src/extensions/languages/Norwegian.json
+++ b/src/extensions/languages/Norwegian.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widget: Window Slider",
         "core_watchfolders_manager_label": "Manger: Se mapper",
         "core_watchfolders_menuitem_label": "Se mappe menyelement",
+        "correctSpellingAutomatically": "Rett stave automatisk",
         "cpAddNoteToSelectedClip_title": "Legg til notat til valgt klipp",
         "cpAddNoteToSelectedClips_title": "Legg til notat til valgte klipp (er)",
         "cpAllowTasksDuringPlayback_title": "Bytt gjengivelse under avspilling",
@@ -665,6 +666,7 @@
         "favorites": "Favoritter",
         "favourite": "Favoritt",
         "favouriteFolderError": "Det er ingen favorittmappe som er lagret for denne handlingen.\n\nLagre en favorittmappe for denne handlingen, og prøv igjen.",
+        "favouriteKeyword": "Favoritt nøkkelord",
         "favourites": "Favoritter",
         "fcpMediaFolderCancel": "Avbryt",
         "fcpMediaFolderImport": "Import",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "Nettleser: Lagre og gjenopprett layouter",
         "finalcutpro_browser_pasteboardtomarkers_label": "Nettleser: Pappersmarkører til klipp",
         "finalcutpro_browser_playhead_label": "Nettleser: Playhead-funksjoner",
+        "finalcutpro_browser_selectlibrary_label": "Nettleser: Velg Bibliotek",
         "finalcutpro_browser_soloclip_label": "Nettleser: Solo Clip",
         "finalcutpro_commands_actions_label": "Handlingskommandoer",
         "finalcutpro_commands_label": "Final Cut Pro-tastaturkommandoer",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI Controls: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "MIDI-kontroller: Timeline Zoom",
         "finalcutpro_midi_manager_label": "Leder: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Varsler: IFTTT",
         "finalcutpro_notifications_imessage_label": "Varsler: iMessage",
         "finalcutpro_notifications_manager_label": "Manager: Varsler",
         "finalcutpro_notifications_prowl_label": "Varsler: Prowl",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "Innstillinger: Generelt",
         "finalcutpro_preferences_manager_label": "Innstillinger: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Innstillinger: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Innstillinger: Stavekontroll",
         "finalcutpro_setup_scan_label": "Oppsett: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Oppsett: Ikke-støttet versjonskontroll",
         "finalcutpro_streamdeck_label": "Stream dekk",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "Tekst Pasteboard History",
         "global_screencapture_action": "Skjermfangst",
         "global_scripts_action": "Apple",
+        "global_snippets_action": "Tekstutdrag",
         "global_streamDeckbanks_action": "Stream dekkbanker",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
@@ -938,6 +944,10 @@
         "goToBeginning": "Gå til begynnelsen",
         "goToColorInspector": "Gå til Color Inspector",
         "goToEnd": "Gå til slutt",
+        "goToNextFrameWithMutedAudio": "Gå til Neste ramme (med dempet lyd)",
+        "goToNextFrameWithMutedAudioDescription": "Flytt avspillingshodet til neste ramme med dempet lyd.",
+        "goToPreviousFrameWithMutedAudio": "Gå til forrige ramme (med dempet lyd)",
+        "goToPreviousFrameWithMutedAudioDescription": "Flytt avspillingshodet til forrige ramme med dempet lyd.",
         "goToRangeEnd": "Gå til Range End",
         "goToRangeStart": "Gå til Range Start",
         "gradient": "gradient",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "Hjelp til å oversette CommandPost",
         "helpandsupport_group": "Hjelp og støtte",
         "hiddenFinalCutProPreferences": "Skjulte Final Cut Pro-preferanser",
+        "hideKeyword": "Skjul nøkkelord",
         "hideRejected": "Skjul avvist",
         "high": "Høy",
         "highlightPlayhead": "Fremhev Playhead",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage-varsler",
         "icon": "Ikon",
         "identification": "Identifikasjon",
+        "iftttAPIKey": "Webhook API-nøkkel",
+        "iftttEnableNotifications": "Aktiver IFTTT-integrasjon",
+        "iftttEventName": "Webhook Event Name",
+        "iftttGetAPIKey": "Få Webhook API-nøkkel",
+        "iftttNotifications": "IFTTT-varsler",
+        "iftttServerFailed": "IFTTT-serverforbindelsesfeil",
+        "iftttSignup": "Registrer deg for en IFTTT-konto",
         "ignore": "Overse",
         "ignoreBackgroundTasks": "Ignorer bakgrunnsoppgaver Advarsel",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignorer ESC-nøkkelen når Final Cut Pro er fullskjerm",
@@ -1110,6 +1128,7 @@
         "medium": "Medium",
         "memory": "Hukommelse",
         "menuChoiceSubText": "Meny: %{bane}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Menyelementet kunne ikke utløses vellykket.",
         "menubarHeading": "Menyfelt",
         "menubarPanelLabel": "Menyfelt",
         "menubarPanelTooltip": "Menylinjeinnstillinger",
@@ -1357,9 +1376,11 @@
         "relative": "Slektning",
         "reload": "Last på nytt",
         "rememberLastQuery": "Husk siste søk",
+        "removeFavouriteKeyword": "Fjern favoritt søkeord",
         "removeFromList": "Fjern fra liste",
         "renameButton": "Gi nytt navn til knappen",
         "renameButtonQuestion": "Hva vil du gi nytt navn til denne knappen?",
+        "renameClip": "Gi nytt navn til klippet",
         "renderComplete": "Rendring fullført!",
         "replace": "Erstatte",
         "replaceAll": "Bytt ut alle",
@@ -1387,6 +1408,11 @@
         "restore": "Restaurere",
         "restoreBrowserLayoutForSelectedCollection_title": "Gjenopprett nettleserlayout for valgt samling",
         "restoreBrowserLayoutToMemory": "Gjenopprett nettleserlayout til minne",
+        "restoreHiddenKeyword": "Gjenopprett skjult nøkkelord",
+        "revealInKeywordCollection": "Avslør i nøkkelordsamling",
+        "revealInKeywordCollectionAndSolo": "Avslør i nøkkelordsamling og solo",
+        "revealInKeywordCollectionAndSoloDescription": "Viser det valgte tidslinjeklippet i en bestemt nettlesersøkeordsamling og viser det",
+        "revealInKeywordCollectionDescription": "Viser det valgte tidslinjeklippet i en bestemt nettlesersøkeordsamling",
         "reverse": "Omvendt",
         "right": "Ikke sant",
         "rightClickToAssignAction": "Du kan høyreklikke på denne knappen for å tilordne en handling til den.",
@@ -1444,6 +1470,7 @@
         "segments": "segmenter",
         "select": "Plukke ut",
         "selectAFolderToSaveCSV": "Velg en mappe du vil lagre CSV i",
+        "selectActiveLibraryInBrowser": "Velg Aktivt bibliotek i nettleseren",
         "selectCompressorDestination": "Velg en destinasjonsmappe:",
         "selectCompressorSettingsFile": "Velg en kompressorinnstillingsfil:",
         "selectDestinationFolder": "Velg en destinasjonsmappe:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Velg midten av forrige klipp i samme historielinje",
         "selectRightAudioEdge": "Velg Høyre lydkanten",
         "selectRightEdge": "Velg Høyre kant",
+        "selectTopmostLibraryInBrowser": "Velg Øverst bibliotek i nettleseren",
         "selectVoice": "Velg Stemme",
         "selected": "valgt",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Det valgte klippet tilbyr ingen alternativ for tekstjustering.",
@@ -1606,6 +1634,7 @@
         "softness": "mykhet",
         "sound": "Lyd",
         "spacing": "Spacing",
+        "sponsorCommandPost": "Sponsor CommandPost",
         "stabilizationMethod": "Stabiliseringsmetode",
         "start": "Start",
         "startScan": "Start søk",
