--- a/src/extensions/languages/Polish.json
+++ b/src/extensions/languages/Polish.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widżet: Suwak okna",
         "core_watchfolders_manager_label": "Kierownik: Oglądaj foldery",
         "core_watchfolders_menuitem_label": "Obejrzyj pozycję menu folderu",
+        "correctSpellingAutomatically": "Popraw pisownię automatycznie",
         "cpAddNoteToSelectedClip_title": "Dodaj notatkę do wybranego klipu",
         "cpAddNoteToSelectedClips_title": "Dodaj notatkę do wybranych klipów",
         "cpAllowTasksDuringPlayback_title": "Przełącz renderowanie podczas odtwarzania",
@@ -749,6 +750,7 @@
         "finalcutpro_browser_layouts_label": "Przeglądarka: Zapisz i przywróć układy",
         "finalcutpro_browser_pasteboardtomarkers_label": "Przeglądarka: Markery tekturowe do wycięcia",
         "finalcutpro_browser_playhead_label": "Przeglądarka: funkcje głowicy Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Przeglądarka: wybierz bibliotekę",
         "finalcutpro_browser_soloclip_label": "Przeglądarka: Solo Clip",
         "finalcutpro_commands_actions_label": "Polecenia Działania",
         "finalcutpro_commands_label": "Polecenia klawiaturowe Final Cut Pro",
@@ -807,6 +809,7 @@
         "finalcutpro_midi_controls_video_label": "Kontrolki MIDI: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "Kontrolki MIDI: Zoom osi czasu",
         "finalcutpro_midi_manager_label": "Kierownik: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Powiadomienia: IFTTT",
         "finalcutpro_notifications_imessage_label": "Powiadomienia: iMessage",
         "finalcutpro_notifications_manager_label": "Kierownik: Powiadomienia",
         "finalcutpro_notifications_prowl_label": "Powiadomienia: Prowl",
@@ -819,6 +822,7 @@
         "finalcutpro_preferences_general_label": "Preferencje: Ogólne",
         "finalcutpro_preferences_manager_label": "Preferencje: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferencje: Skanuj Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Preferencje: Pisownia",
         "finalcutpro_setup_scan_label": "Konfiguracja: skanowanie wtyczek Final Cut Pro",
         "finalcutpro_setup_unsupportedversion_label": "Konfiguracja: nieobsługiwana kontrola wersji",
         "finalcutpro_streamdeck_label": "Strumień talii",
@@ -1003,6 +1007,13 @@
         "iMessageNotifications": "Powiadomienia iMessage",
         "icon": "Ikona",
         "identification": "Identyfikacja",
+        "iftttAPIKey": "Klucz API Webhook",
+        "iftttEnableNotifications": "Włącz integrację IFTTT",
+        "iftttEventName": "Nazwa zdarzenia Webhook",
+        "iftttGetAPIKey": "Uzyskaj klucz API Webhook",
+        "iftttNotifications": "Powiadomienia IFTTT",
+        "iftttServerFailed": "Błąd połączenia z serwerem IFTTT",
+        "iftttSignup": "Zarejestruj konto IFTTT",
         "ignore": "Ignorować",
         "ignoreBackgroundTasks": "Ignoruj zadania w tle Ostrzeżenie",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Zignoruj klawisz ESC, gdy Final Cut Pro jest w trybie pełnoekranowym",
@@ -1127,6 +1138,7 @@
         "medium": "Średni",
         "memory": "Pamięć",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Nie można pomyślnie uruchomić elementu menu.",
         "menubarHeading": "Pasek menu",
         "menubarPanelLabel": "Pasek menu",
         "menubarPanelTooltip": "Preferencje paska menu",
@@ -1474,6 +1486,7 @@
         "segments": "Segmenty",
         "select": "Wybierz",
         "selectAFolderToSaveCSV": "Wybierz folder, w którym chcesz zapisać plik CSV",
+        "selectActiveLibraryInBrowser": "Wybierz Active Library w przeglądarce",
         "selectCompressorDestination": "Wybierz folder docelowy:",
         "selectCompressorSettingsFile": "Wybierz plik ustawień kompresora:",
         "selectDestinationFolder": "Wybierz folder docelowy:",
@@ -1485,6 +1498,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Wybierz Środek poprzedniego klipu w tej samej fabule",
         "selectRightAudioEdge": "Wybierz Right Audio Edge",
         "selectRightEdge": "Wybierz prawą krawędź",
+        "selectTopmostLibraryInBrowser": "Wybierz najwyższą bibliotekę w przeglądarce",
         "selectVoice": "Wybierz głos",
         "selected": "Wybrany",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Wybrany klip nie oferuje żadnych opcji wyrównania tekstu.",
