--- a/src/extensions/languages/Portuguese.json
+++ b/src/extensions/languages/Portuguese.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widget: Window Slider",
         "core_watchfolders_manager_label": "Manger: Watch Folders",
         "core_watchfolders_menuitem_label": "Assista item do menu da pasta",
+        "correctSpellingAutomatically": "Corrigir ortografia automaticamente",
         "cpAddNoteToSelectedClip_title": "Adicionar nota ao clipe selecionado",
         "cpAddNoteToSelectedClips_title": "Adicionar nota ao (s) clipe (s) selecionado (s)",
         "cpAllowTasksDuringPlayback_title": "Alternar Renderização durante a Reprodução",
@@ -665,6 +666,7 @@
         "favorites": "Favoritos",
         "favourite": "Favorito",
         "favouriteFolderError": "Não há pastas favoritas atualmente salvas para esta ação.\n\nPor favor, salve uma pasta favorita para esta ação e tente novamente.",
+        "favouriteKeyword": "Palavra-chave favorita",
         "favourites": "Favoritos",
         "fcpMediaFolderCancel": "Cancelar",
         "fcpMediaFolderImport": "Importar",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "Navegador: Salvar e restaurar layouts",
         "finalcutpro_browser_pasteboardtomarkers_label": "Navegador: marcadores de papel para recortar",
         "finalcutpro_browser_playhead_label": "Navegador: Características do Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Navegador: selecione Biblioteca",
         "finalcutpro_browser_soloclip_label": "Navegador: Clipe Solo",
         "finalcutpro_commands_actions_label": "Ações de Comandos",
         "finalcutpro_commands_label": "Comandos do teclado do Final Cut Pro",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "Controles MIDI: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "Controles MIDI: Timeline Zoom",
         "finalcutpro_midi_manager_label": "Gerente: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Notificações: IFTTT",
         "finalcutpro_notifications_imessage_label": "Notificações: iMessage",
         "finalcutpro_notifications_manager_label": "Gerente: Notificações",
         "finalcutpro_notifications_prowl_label": "Notificações: Prowl",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "Preferências: Geral",
         "finalcutpro_preferences_manager_label": "Preferências: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferências: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Preferências: Ortografia",
         "finalcutpro_setup_scan_label": "Instalação: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Configuração: verificação de versão não suportada",
         "finalcutpro_streamdeck_label": "Deck de fluxo",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "Histórico de pastas de texto",
         "global_screencapture_action": "Captura de tela",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "Trechos",
         "global_streamDeckbanks_action": "Bancos Stream Deck",
         "global_touchbarbanks_action": "Bancos da barra de toque",
         "global_widgets_action": "Widgets da barra de toque global",
@@ -938,6 +944,10 @@
         "goToBeginning": "Vá para o começo",
         "goToColorInspector": "Vá para o Color Inspector",
         "goToEnd": "Vá para o final",
+        "goToNextFrameWithMutedAudio": "Ir para o próximo quadro (com áudio mudo)",
+        "goToNextFrameWithMutedAudioDescription": "Mova a reprodução para o próximo quadro com áudio mudo.",
+        "goToPreviousFrameWithMutedAudio": "Ir para o quadro anterior (com áudio mudo)",
+        "goToPreviousFrameWithMutedAudioDescription": "Mova a reprodução para o quadro anterior com áudio mudo.",
         "goToRangeEnd": "Ir para o final do intervalo",
         "goToRangeStart": "Ir para o início do intervalo",
         "gradient": "Gradiente",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "Ajude a traduzir CommandPost",
         "helpandsupport_group": "Ajuda e Suporte",
         "hiddenFinalCutProPreferences": "Preferências ocultas do Final Cut Pro",
+        "hideKeyword": "Ocultar palavra-chave",
         "hideRejected": "Ocultar rejeitado",
         "high": "Alto",
         "highlightPlayhead": "Highlight Playhead",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "Notificações do iMessage",
         "icon": "Ícone",
         "identification": "Identificação",
+        "iftttAPIKey": "Chave da API Webhook",
+        "iftttEnableNotifications": "Ativar integração IFTTT",
+        "iftttEventName": "Nome do Evento Webhook",
+        "iftttGetAPIKey": "Obter chave da API Webhook",
+        "iftttNotifications": "Notificações IFTTT",
+        "iftttServerFailed": "Erro de conexão do servidor IFTTT",
+        "iftttSignup": "Inscrição para uma conta IFTTT",
         "ignore": "Ignorar",
         "ignoreBackgroundTasks": "Aviso Ignorar Tarefas em Segundo Plano",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore a tecla ESC quando o Final Cut Pro estiver em tela cheia",
@@ -1110,6 +1128,7 @@
         "medium": "Médio",
         "memory": "Memória",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "O item de menu não pôde ser acionado com sucesso.",
         "menubarHeading": "Barra de menu",
         "menubarPanelLabel": "Barra de menu",
         "menubarPanelTooltip": "Preferências do menu",
@@ -1357,9 +1376,11 @@
         "relative": "Relativo",
         "reload": "recarregar",
         "rememberLastQuery": "Lembre-se da última consulta",
+        "removeFavouriteKeyword": "Remover palavra-chave favorita",
         "removeFromList": "Remover da lista",
         "renameButton": "Renomear botão",
         "renameButtonQuestion": "O que você gostaria de renomear este botão?",
+        "renameClip": "Renomear clipe",
         "renderComplete": "Render Complete!",
         "replace": "Substituir",
         "replaceAll": "Substitua tudo",
@@ -1387,6 +1408,11 @@
         "restore": "Restaurar",
         "restoreBrowserLayoutForSelectedCollection_title": "Restaurar o layout do navegador para a coleção selecionada",
         "restoreBrowserLayoutToMemory": "Restaure o layout do navegador para a memória",
+        "restoreHiddenKeyword": "Restaurar palavra-chave oculta",
+        "revealInKeywordCollection": "Revelar na coleção de palavras-chave",
+        "revealInKeywordCollectionAndSolo": "Revelar na coleção de palavras-chave e solo",
+        "revealInKeywordCollectionAndSoloDescription": "Revela o clipe da linha do tempo atualmente selecionado em uma coleção específica de palavras-chave do navegador e",
+        "revealInKeywordCollectionDescription": "Revela o clipe da linha do tempo atualmente selecionado em uma coleção específica de palavras-chave do navegador",
         "reverse": "Marcha ré",
         "right": "Certo",
         "rightClickToAssignAction": "Você pode clicar com o botão direito neste botão para atribuir uma ação a ele.",
@@ -1444,6 +1470,7 @@
         "segments": "Segmentos",
         "select": "Selecione",
         "selectAFolderToSaveCSV": "Por favor, selecione uma pasta para salvar o arquivo CSV",
+        "selectActiveLibraryInBrowser": "Selecione Biblioteca ativa no navegador",
         "selectCompressorDestination": "Selecione uma pasta de destino:",
         "selectCompressorSettingsFile": "Selecione um arquivo de configurações do compressor:",
         "selectDestinationFolder": "Selecione uma pasta de destino:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Selecione meio do clipe anterior no mesmo enredo",
         "selectRightAudioEdge": "Selecione o Edge de Áudio Direito",
         "selectRightEdge": "Selecione a borda direita",
+        "selectTopmostLibraryInBrowser": "Selecione a biblioteca mais acima no navegador",
         "selectVoice": "Selecione Voz",
         "selected": "Selecionado",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "O clipe selecionado não oferece nenhuma opção de alinhamento de texto.",
@@ -1606,6 +1634,7 @@
         "softness": "Suavidade",
         "sound": "Som",
         "spacing": "Espaçamento",
+        "sponsorCommandPost": "CommandPost do patrocinador",
         "stabilizationMethod": "Método de Estabilização",
         "start": "Começar",
         "startScan": "Inicia escaneamento",
