--- a/src/extensions/languages/Punjabi.json
+++ b/src/extensions/languages/Punjabi.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "ਵਿਜੇਟ: ਵਿੰਡੋ ਸਲਾਈਡਰ",
         "core_watchfolders_manager_label": "ਖੁਰਲੀ: ਵਾਚ ਫੋਲਡਰ",
         "core_watchfolders_menuitem_label": "ਫੋਲਡਰ ਮੇਨੂ ਆਈਟਮ ਵੇਖੋ",
+        "correctSpellingAutomatically": "ਸਪੈਲਿੰਗ ਆਪਣੇ ਆਪ ਸਹੀ ਕਰੋ",
         "cpAddNoteToSelectedClip_title": "ਚੁਣੇ ਹੋਏ ਕਲਿੱਪ ਤੇ ਨੋਟ ਸ਼ਾਮਲ ਕਰੋ",
         "cpAddNoteToSelectedClips_title": "ਚੁਣੀਆਂ ਗਈਆਂ ਕਲਿੱਪਾਂ 'ਤੇ ਨੋਟ ਸ਼ਾਮਲ ਕਰੋ",
         "cpAllowTasksDuringPlayback_title": "ਪਲੇਬੈਕ ਦੇ ਦੌਰਾਨ ਪੇਸ਼ਕਾਰੀ ਟੌਗਲ ਕਰੋ",
@@ -665,6 +666,7 @@
         "favorites": "ਮਨਪਸੰਦ",
         "favourite": "ਮਨਪਸੰਦ",
         "favouriteFolderError": "ਇਸ ਕਿਰਿਆ ਲਈ ਇਸ ਸਮੇਂ ਕੋਈ ਮਨਪਸੰਦ ਫੋਲਡਰ ਸੁਰੱਖਿਅਤ ਨਹੀਂ ਕੀਤਾ ਗਿਆ ਹੈ.\n\nਕਿਰਪਾ ਕਰਕੇ ਇਸ ਕਿਰਿਆ ਲਈ ਕੋਈ ਮਨਪਸੰਦ ਫੋਲਡਰ ਸੁਰੱਖਿਅਤ ਕਰੋ ਅਤੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ.",
+        "favouriteKeyword": "ਮਨਪਸੰਦ ਕੀਵਰਡ",
         "favourites": "ਮਨਪਸੰਦ",
         "fcpMediaFolderCancel": "ਰੱਦ ਕਰੋ",
         "fcpMediaFolderImport": "ਆਯਾਤ ਕਰੋ",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "ਬਰਾਊਜ਼ਰ: ਲੇਆਊਟ ਸੇਵ ਅਤੇ ਰੀਸਟੋਰ ਕਰੋ",
         "finalcutpro_browser_pasteboardtomarkers_label": "ਬ੍ਰਾਉਜ਼ਰ: ਕਲੀਪ ਕਰਨ ਲਈ ਪੇਸਟਬੋਰਡ ਮਾਰਕਰ",
         "finalcutpro_browser_playhead_label": "ਬਰਾਊਜ਼ਰ: ਪਲੇਹੈੱਡ ਫੀਚਰ",
+        "finalcutpro_browser_selectlibrary_label": "ਬ੍ਰਾserਜ਼ਰ: ਲਾਇਬ੍ਰੇਰੀ ਚੁਣੋ",
         "finalcutpro_browser_soloclip_label": "ਬ੍ਰਾਉਜ਼ਰ: ਸੋਲੋ ਕਲਿਪ",
         "finalcutpro_commands_actions_label": "ਕਮਾਂਡਾਂ ਐਕਸ਼ਨ",
         "finalcutpro_commands_label": "ਫਾਈਨਲ ਕਟ ਪ੍ਰੋ ਕੀਬੋਰਡ ਕਮਾਂਡਜ਼",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI ਕੰਟਰੋਲ: ਵੀਡੀਓ ਇੰਸਪੈਕਟਰ",
         "finalcutpro_midi_controls_zoom_label": "MIDI ਕੰਟਰੋਲ: ਟਾਈਮਲਾਈਨ ਜ਼ੂਮ",
         "finalcutpro_midi_manager_label": "ਮੈਨੇਜਰ: MIDI",
+        "finalcutpro_notifications_ifttt_label": "ਸੂਚਨਾਵਾਂ: ਆਈ.ਐਫ.ਟੀ.ਟੀ.ਟੀ.",
         "finalcutpro_notifications_imessage_label": "ਸੂਚਨਾਵਾਂ: iMessage",
         "finalcutpro_notifications_manager_label": "ਮੈਨੇਜਰ: ਸੂਚਨਾਵਾਂ",
         "finalcutpro_notifications_prowl_label": "ਸੂਚਨਾਵਾਂ: ਪ੍ਰੌਗਲ",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "ਤਰਜੀਹਾਂ: ਆਮ",
         "finalcutpro_preferences_manager_label": "ਤਰਜੀਹਾਂ: ਪੈਨਲ ਪ੍ਰਬੰਧਕ",
         "finalcutpro_preferences_scanfinalcutpro_label": "ਤਰਜੀਹਾਂ: ਸਕੈਨ ਫਾਈਨਲ ਕੱਟ ਪ੍ਰੋ",
+        "finalcutpro_preferences_spelling_label": "ਪਸੰਦ: ਸਪੈਲਿੰਗ",
         "finalcutpro_setup_scan_label": "ਸੈੱਟਅੱਪ: ਫਾਈਨਲ ਕਟ ਪ੍ਰੋ ਪਲੱਗਇਨ ਸਕੈਨ",
         "finalcutpro_setup_unsupportedversion_label": "ਸੈੱਟਅੱਪ: ਅਸਮਰਥਿਤ ਵਰਜਨ ਜਾਂਚ",
         "finalcutpro_streamdeck_label": "ਸਟ੍ਰੀਮ ਡੈੱਕ",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "ਟੈਕਸਟ ਪਾਸਟਬੋਰਡ ਇਤਿਹਾਸ",
         "global_screencapture_action": "ਸਕ੍ਰੀਨ ਕੈਪਚਰ",
         "global_scripts_action": "ਐਪਲ ਸਕ੍ਰਿਪਟ",
+        "global_snippets_action": "ਸਨਿੱਪਟ",
         "global_streamDeckbanks_action": "ਸਟ੍ਰੀਮ ਡੈੱਕ ਬੈਂਕ",
         "global_touchbarbanks_action": "ਟਚ ਬਾਰ ਬੈਂਕਾਂ",
         "global_widgets_action": "ਗਲੋਬਲ ਟਚ ਬਾਰ ਵਿਡਜਿਟ",
@@ -938,6 +944,10 @@
         "goToBeginning": "ਸ਼ੁਰੂਆਤ ਤੇ ਜਾਓ",
         "goToColorInspector": "ਰੰਗ ਇੰਸਪੈਕਟਰ 'ਤੇ ਜਾਓ",
         "goToEnd": "ਅੰਤ 'ਤੇ ਜਾਓ",
+        "goToNextFrameWithMutedAudio": "ਨੈਕਸਟ ਫਰੇਮ ਤੇ ਜਾਓ (ਮਿutedਟ ਆਡੀਓ ਨਾਲ)",
+        "goToNextFrameWithMutedAudioDescription": "ਪਲੇਅਹੈਡ ਨੂੰ ਮੂਕ ਆਡੀਓ ਨਾਲ ਅਗਲੇ ਫਰੇਮ ਵਿੱਚ ਭੇਜੋ.",
+        "goToPreviousFrameWithMutedAudio": "ਪਿਛਲੇ ਫਰੇਮ ਤੇ ਜਾਓ (ਮਿutedਟ ਆਡੀਓ ਨਾਲ)",
+        "goToPreviousFrameWithMutedAudioDescription": "ਪਲੇਅਹਡ ਨੂੰ ਮੂਕ audioਡੀਓ ਨਾਲ ਪਿਛਲੇ ਫਰੇਮ ਤੇ ਭੇਜੋ.",
         "goToRangeEnd": "ਰੇਂਜ ਐਂਡ ਤੇ ਜਾਓ",
         "goToRangeStart": "ਰੇਂਜ ਸਟਾਰਟ ਤੇ ਜਾਓ",
         "gradient": "ਢਾਲ",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "ਕਮਾਂਡਪੋਸਟ ਦਾ ਅਨੁਵਾਦ ਕਰਨ ਵਿੱਚ ਸਹਾਇਤਾ ਕਰੋ",
         "helpandsupport_group": "ਮਦਦ ਅਤੇ ਸਮਰਥਨ",
         "hiddenFinalCutProPreferences": "ਓਹਲੇ ਫਾਈਨਲ ਕਟ ਪ੍ਰੋ ਪਸੰਦ",
+        "hideKeyword": "ਕੀਵਰਡ ਓਹਲੇ ਕਰੋ",
         "hideRejected": "ਰੱਦ ਕਰੋ ਛੁਪਾਓ",
         "high": "ਉੱਚਾ",
         "highlightPlayhead": "ਪਲੇਹਾਈਟ ਤੇ ਹਾਈਲਾਈਟ ਕਰੋ",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage ਸੂਚਨਾਵਾਂ",
         "icon": "ਆਈਕਨ",
         "identification": "ਪਛਾਣ",
+        "iftttAPIKey": "ਵੈਬਹੁੱਕ API ਕੁੰਜੀ",
+        "iftttEnableNotifications": "IFTTT ਏਕੀਕਰਣ ਨੂੰ ਸਮਰੱਥ ਕਰੋ",
+        "iftttEventName": "ਵੈਬਹੁੱਕ ਈਵੈਂਟ ਦਾ ਨਾਮ",
+        "iftttGetAPIKey": "ਵੈਬਹੁੱਕ API ਕੁੰਜੀ ਪ੍ਰਾਪਤ ਕਰੋ",
+        "iftttNotifications": "IFTTT ਸੂਚਨਾ",
+        "iftttServerFailed": "IFTTT ਸਰਵਰ ਕੁਨੈਕਸ਼ਨ ਗਲਤੀ",
+        "iftttSignup": "IFTTT ਖਾਤੇ ਲਈ ਸਾਈਨ ਅਪ ਕਰੋ",
         "ignore": "ਅਣਡਿੱਠ ਕਰੋ",
         "ignoreBackgroundTasks": "ਬੈਕਗਰਾ .ਂਡ ਟਾਸਕ ਚੇਤਾਵਨੀ ਨੂੰ ਅਣਡਿੱਠ ਕਰੋ",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "ਜਦੋਂ ਫਾਈਨਲ ਕਟ ਪ੍ਰੋ ਪੂਰੀ ਸਕ੍ਰੀਨ ਹੈ ਤਾਂ ਈਐਸਸੀ ਕੁੰਜੀ ਨੂੰ ਅਣਡਿੱਠ ਕਰੋ",
@@ -1110,6 +1128,7 @@
         "medium": "ਦਰਮਿਆਨੇ",
         "memory": "ਮੈਮੋਰੀ",
         "menuChoiceSubText": "ਮੇਨੂ: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "ਮੀਨੂ ਆਈਟਮ ਨੂੰ ਸਫਲਤਾਪੂਰਵਕ ਚਾਲੂ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਿਆ.",
         "menubarHeading": "ਮੇਨਬਾਰ",
         "menubarPanelLabel": "ਮੇਨਬਾਰ",
         "menubarPanelTooltip": "ਮੇਨੂ-ਪੱਟੀ ਪਸੰਦ",
@@ -1357,9 +1376,11 @@
         "relative": "ਰਿਸ਼ਤੇਦਾਰ",
         "reload": "ਮੁੜ ਲੋਡ ਕਰੋ",
         "rememberLastQuery": "ਆਖਰੀ ਪੁੱਛਗਿੱਛ ਯਾਦ ਰੱਖੋ",
+        "removeFavouriteKeyword": "ਮਨਪਸੰਦ ਕੀਵਰਡ ਹਟਾਓ",
         "removeFromList": "ਲਿਸਟ ਵਿੱਚੋਂ ਹਟਾਓ",
         "renameButton": "ਨਾਮ ਬਦਲੋ ਬਟਨ",
         "renameButtonQuestion": "ਤੁਸੀਂ ਇਸ ਬਟਨ ਦਾ ਕੀ ਨਾਮ ਬਦਲਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
+        "renameClip": "ਕਲਿੱਪ ਦਾ ਨਾਮ ਬਦਲੋ",
         "renderComplete": "ਰੈਂਡਰ ਪੂਰਾ ਕਰੋ!",
         "replace": "ਬਦਲੋ",
         "replaceAll": "ਸਭ ਬਦਲੋ",
@@ -1387,6 +1408,11 @@
         "restore": "ਰੀਸਟੋਰ ਕਰੋ",
         "restoreBrowserLayoutForSelectedCollection_title": "ਚੁਣੀਆਂ ਸੰਗ੍ਰਹਿ ਲਈ ਬ੍ਰਾਊਜ਼ਰ ਲੇਆਉਟ ਮੁੜ ਸਥਾਪਿਤ ਕਰੋ",
         "restoreBrowserLayoutToMemory": "ਬ੍ਰਾਊਜ਼ਰ ਲੇਆਉਟ ਨੂੰ ਮੈਮਰੀ ਲਈ ਰੀਸਟੋਰ ਕਰੋ",
+        "restoreHiddenKeyword": "ਲੁਕਵੇਂ ਕੀਵਰਡ ਨੂੰ ਰੀਸਟੋਰ ਕਰੋ",
+        "revealInKeywordCollection": "ਕੀਵਰਡ ਸੰਗ੍ਰਹਿ ਵਿੱਚ ਪ੍ਰਗਟ ਕਰੋ",
+        "revealInKeywordCollectionAndSolo": "ਕੀਵਰਡ ਸੰਗ੍ਰਹਿ ਅਤੇ ਇਕੱਲੇ ਵਿੱਚ ਪ੍ਰਗਟ ਕਰੋ",
+        "revealInKeywordCollectionAndSoloDescription": "ਇੱਕ ਖਾਸ ਬ੍ਰਾserਜ਼ਰ ਕੀਵਰਡ ਸੰਗ੍ਰਹਿ ਵਿੱਚ ਇਸ ਸਮੇਂ ਚੁਣੇ ਗਏ ਟਾਈਮਲਾਈਨ ਕਲਿੱਪ ਨੂੰ ਪ੍ਰਦਰਸ਼ਿਤ ਕਰਦਾ ਹੈ ਅਤੇ ਇਸ ਵਿੱਚ ਇਕੱਲੇ",
+        "revealInKeywordCollectionDescription": "ਇੱਕ ਖਾਸ ਬ੍ਰਾserਜ਼ਰ ਕੀਵਰਡ ਸੰਗ੍ਰਹਿ ਵਿੱਚ ਮੌਜੂਦਾ ਚੁਣੀ ਗਈ ਟਾਈਮਲਾਈਨ ਕਲਿੱਪ ਨੂੰ ਦਰਸਾਉਂਦਾ ਹੈ",
         "reverse": "ਉਲਟ",
         "right": "ਸੱਜਾ",
         "rightClickToAssignAction": "ਇਸ ਨੂੰ ਕੋਈ ਕਾਰਜ ਨਿਰਧਾਰਤ ਕਰਨ ਲਈ ਤੁਸੀਂ ਇਸ ਬਟਨ ਤੇ ਸੱਜਾ ਕਲਿੱਕ ਕਰ ਸਕਦੇ ਹੋ.",
@@ -1444,6 +1470,7 @@
         "segments": "ਭਾਗ",
         "select": "ਚੁਣੋ",
         "selectAFolderToSaveCSV": "CSV ਨੂੰ ਬਚਾਉਣ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਫੋਲਡਰ ਦੀ ਚੋਣ ਕਰੋ",
+        "selectActiveLibraryInBrowser": "ਬਰਾ Browਜ਼ਰ ਵਿੱਚ ਐਕਟਿਵ ਲਾਇਬ੍ਰੇਰੀ ਦੀ ਚੋਣ ਕਰੋ",
         "selectCompressorDestination": "ਇੱਕ ਟਿਕਾਣਾ ਫੋਲਡਰ ਚੁਣੋ:",
         "selectCompressorSettingsFile": "ਇੱਕ ਕੰਪ੍ਰਸ਼ਰ ਸੈਟਿੰਗ ਫਾਇਲ ਚੁਣੋ:",
         "selectDestinationFolder": "ਇੱਕ ਟਿਕਾਣਾ ਫੋਲਡਰ ਨੂੰ ਚੁਣੋ ਜੀ:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "ਇਕੋ ਕਹਾਣੀ ਵਿਚ ਪਿਛਲੇ ਮਿਡਲ ਦਾ ਪਿਛਲਾ ਕਲਿੱਪ ਚੁਣੋ",
         "selectRightAudioEdge": "ਸੱਜਾ ਆਡੀਓ ਏਜ ਚੁਣੋ",
         "selectRightEdge": "ਸੱਜਾ ਕਿਨ ਚੁਣੋ",
+        "selectTopmostLibraryInBrowser": "ਬਰਾ Browਜ਼ਰ ਵਿੱਚ ਚੋਟੀ ਦੀ ਲਾਇਬ੍ਰੇਰੀ ਦੀ ਚੋਣ ਕਰੋ",
         "selectVoice": "ਵੌਇਸ ਚੁਣੋ",
         "selected": "ਚੁਣਿਆ ਹੋਇਆ",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "ਚੁਣਿਆ ਕਲਿੱਪ ਕੋਈ ਟੈਕਸਟ ਅਲਾਈਨਮੈਂਟ ਵਿਕਲਪ ਪੇਸ਼ ਨਹੀਂ ਕਰਦਾ.",
@@ -1606,6 +1634,7 @@
         "softness": "ਨਰਮਾਈ",
         "sound": "ਆਵਾਜ਼",
         "spacing": "ਸਪੇਸਿੰਗ",
+        "sponsorCommandPost": "ਸਪਾਂਸਰ ਕਮਾਂਡਪੋਸਟ",
         "stabilizationMethod": "ਸਥਿਰਤਾ odੰਗ",
         "start": "ਸ਼ੁਰੂ ਕਰੋ",
         "startScan": "ਸਕੈਨ ਸ਼ੁਰੂ ਕਰੋ",
