--- a/src/extensions/languages/Russian.json
+++ b/src/extensions/languages/Russian.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Виджет: оконный слайдер",
         "core_watchfolders_manager_label": "Manger: Смотреть папки",
         "core_watchfolders_menuitem_label": "Элемент меню «Папка»",
+        "correctSpellingAutomatically": "Правильное правописание автоматически",
         "cpAddNoteToSelectedClip_title": "Добавить примечание к выбранному клипу",
         "cpAddNoteToSelectedClips_title": "Добавить заметку к выбранным клипам",
         "cpAllowTasksDuringPlayback_title": "Переключение рендеринга во время воспроизведения",
@@ -667,6 +668,7 @@
         "favorites": "Избранные",
         "favourite": "любимец",
         "favouriteFolderError": "В данный момент нет любимой папки для этого действия.\n\nПожалуйста, сохраните любимую папку для этого действия и повторите попытку.",
+        "favouriteKeyword": "Любимое ключевое слово",
         "favourites": "Избранные",
         "fcpMediaFolderCancel": "Отмена",
         "fcpMediaFolderImport": "Импортировать",
@@ -748,6 +750,7 @@
         "finalcutpro_browser_layouts_label": "Браузер: сохранение и восстановление макетов",
         "finalcutpro_browser_pasteboardtomarkers_label": "Браузер: маркеры картона для клипов",
         "finalcutpro_browser_playhead_label": "Браузер: функции Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Браузер: выберите библиотеку",
         "finalcutpro_browser_soloclip_label": "Браузер: Solo Clip",
         "finalcutpro_commands_actions_label": "Действия команды",
         "finalcutpro_commands_label": "Команды Final Cut Pro для клавиатуры",
@@ -806,6 +809,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI-контроль: видеоинспектор",
         "finalcutpro_midi_controls_zoom_label": "MIDI-элементы управления: масштабирование по временной шкале",
         "finalcutpro_midi_manager_label": "Менеджер: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Уведомления: IFTTT",
         "finalcutpro_notifications_imessage_label": "Уведомления. IMessage",
         "finalcutpro_notifications_manager_label": "Менеджер: Уведомления",
         "finalcutpro_notifications_prowl_label": "Уведомления. Prowl",
@@ -818,6 +822,7 @@
         "finalcutpro_preferences_general_label": "Настройки: Общие",
         "finalcutpro_preferences_manager_label": "Предпочтения: Диспетчер панелей",
         "finalcutpro_preferences_scanfinalcutpro_label": "Настройки: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Предпочтения: Правописание",
         "finalcutpro_setup_scan_label": "Настройка: плагин Final Cut Pro",
         "finalcutpro_setup_unsupportedversion_label": "Настройка: проверка неподдерживаемой версии",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -938,6 +943,7 @@
         "global_pasteboard_action": "История картона",
         "global_screencapture_action": "Скриншот",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "обрывки",
         "global_streamDeckbanks_action": "Потоковые банки",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Глобальные виджеты штрих-кодов",
@@ -946,6 +952,10 @@
         "goToBeginning": "Перейти к началу",
         "goToColorInspector": "Перейти к Color Inspector",
         "goToEnd": "Перейти к концу",
+        "goToNextFrameWithMutedAudio": "Перейти к следующему кадру (с отключенным звуком)",
+        "goToNextFrameWithMutedAudioDescription": "Переместите точку воспроизведения к следующему кадру с отключенным звуком.",
+        "goToPreviousFrameWithMutedAudio": "Перейти к предыдущему кадру (с отключенным звуком)",
+        "goToPreviousFrameWithMutedAudioDescription": "Переместите точку воспроизведения к предыдущему кадру с отключенным звуком.",
         "goToRangeEnd": "Перейти к концу диапазона",
         "goToRangeStart": "Перейти к началу диапазона",
         "gradient": "градиент",
@@ -963,6 +973,7 @@
         "helpTranslateCommandPost": "Помогите перевести CommandPost",
         "helpandsupport_group": "Помощь и поддержка",
         "hiddenFinalCutProPreferences": "Скрытые настройки Final Cut Pro",
+        "hideKeyword": "Скрыть ключевое слово",
         "hideRejected": "Скрыть отклонено",
         "high": "Высоко",
         "highlightPlayhead": "Выделите Playhead",
@@ -996,6 +1007,13 @@
         "iMessageNotifications": "Уведомления iMessage",
         "icon": "Значок",
         "identification": "Идентификация",
+        "iftttAPIKey": "Ключ Webhook API",
+        "iftttEnableNotifications": "Включить интеграцию IFTTT",
+        "iftttEventName": "Название события Webhook",
+        "iftttGetAPIKey": "Получить ключ API Webhook",
+        "iftttNotifications": "IFTTT Уведомления",
+        "iftttServerFailed": "Ошибка подключения к серверу IFTTT",
+        "iftttSignup": "Регистрация на счет IFTTT",
         "ignore": "игнорировать",
         "ignoreBackgroundTasks": "Игнорировать предупреждение о фоновых задачах",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Игнорировать клавишу ESC, когда Final Cut Pro является полноэкранным",
@@ -1120,6 +1138,7 @@
         "medium": "Средняя",
         "memory": "Память",
         "menuChoiceSubText": "Меню: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Пункт меню не может быть успешно запущен.",
         "menubarHeading": "Строка меню",
         "menubarPanelLabel": "Строка меню",
         "menubarPanelTooltip": "Настройки Menubar",
@@ -1369,9 +1388,11 @@
         "relative": "Родственник",
         "reload": "Перезагрузить",
         "rememberLastQuery": "Запомнить последний запрос",
+        "removeFavouriteKeyword": "Удалить любимое ключевое слово",
         "removeFromList": "Убрать из списка",
         "renameButton": "Кнопка переименования",
         "renameButtonQuestion": "На что бы вы хотели переименовать эту кнопку?",
+        "renameClip": "Переименовать клип",
         "renderComplete": "Render Complete!",
         "replace": "замещать",
         "replaceAll": "Заменить все",
@@ -1399,6 +1420,11 @@
         "restore": "Восстановить",
         "restoreBrowserLayoutForSelectedCollection_title": "Восстановить макет браузера для выбранной коллекции",
         "restoreBrowserLayoutToMemory": "Восстановить расположение браузера в памяти",
+        "restoreHiddenKeyword": "Восстановить скрытое ключевое слово",
+        "revealInKeywordCollection": "Выявить в коллекции ключевых слов",
+        "revealInKeywordCollectionAndSolo": "Покажите в коллекции ключевых слов и соло",
+        "revealInKeywordCollectionAndSoloDescription": "Показывает текущий выбранный клип временной шкалы в определенной коллекции ключевых слов браузера и соло это",
+        "revealInKeywordCollectionDescription": "Показывает текущий выбранный клип временной шкалы в определенной коллекции ключевых слов браузера",
         "reverse": "Задний ход",
         "right": "Правильно",
         "rightClickToAssignAction": "Вы можете щелкнуть правой кнопкой мыши по этой кнопке, чтобы назначить ей действие.",
@@ -1460,6 +1486,7 @@
         "segments": "Сегменты",
         "select": "Выбрать",
         "selectAFolderToSaveCSV": "Пожалуйста, выберите папку для сохранения CSV в",
+        "selectActiveLibraryInBrowser": "Выберите активную библиотеку в браузере",
         "selectCompressorDestination": "Выберите папку назначения:",
         "selectCompressorSettingsFile": "Выберите файл настроек компрессора:",
         "selectDestinationFolder": "Выберите папку назначения:",
@@ -1471,6 +1498,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Выбрать середину предыдущего клипа в той же сюжетной линии",
         "selectRightAudioEdge": "Выберите правую область звука",
         "selectRightEdge": "Выбрать правую грань",
+        "selectTopmostLibraryInBrowser": "Выберите самую верхнюю библиотеку в браузере",
         "selectVoice": "Выбрать голос",
         "selected": "выбранный",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Выбранный клип не предлагает никаких вариантов выравнивания текста.",
@@ -1650,6 +1678,7 @@
         "softness": "Мягкость",
         "sound": "звук",
         "spacing": "расстояние",
+        "sponsorCommandPost": "Спонсор CommandPost",
         "stabilizationMethod": "Метод стабилизации",
         "start": "Начало",
         "startScan": "Начать сканирование",
