--- a/src/extensions/languages/Spanish.json
+++ b/src/extensions/languages/Spanish.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widget: ventana deslizante",
         "core_watchfolders_manager_label": "Manger: carpetas de vigilancia",
         "core_watchfolders_menuitem_label": "Ver elemento de menú de carpeta",
+        "correctSpellingAutomatically": "Corrija la ortografía automáticamente",
         "cpAddNoteToSelectedClip_title": "Agregar nota al clip seleccionado",
         "cpAddNoteToSelectedClips_title": "Agregar nota a los clips seleccionados",
         "cpAllowTasksDuringPlayback_title": "Alternar la reproducción durante la reproducción",
@@ -665,6 +666,7 @@
         "favorites": "Favoritos",
         "favourite": "Favorito",
         "favouriteFolderError": "No hay ninguna carpeta favorita actualmente guardada para esta acción.\n\nGuarde una carpeta favorita para esta acción e intente nuevamente.",
+        "favouriteKeyword": "Palabra clave favorita",
         "favourites": "Favoritos",
         "fcpMediaFolderCancel": "Cancelar",
         "fcpMediaFolderImport": "Importar",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "Navegador: Guardar y restaurar diseños",
         "finalcutpro_browser_pasteboardtomarkers_label": "Navegador: marcadores de cartón para recortar",
         "finalcutpro_browser_playhead_label": "Navegador: Funciones de Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Navegador: Seleccione Biblioteca",
         "finalcutpro_browser_soloclip_label": "Navegador: Solo Clip",
         "finalcutpro_commands_actions_label": "Comandos Acciones",
         "finalcutpro_commands_label": "Comandos de teclado de Final Cut Pro",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "Controles MIDI: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "Controles MIDI: Zoom de línea de tiempo",
         "finalcutpro_midi_manager_label": "Gerente: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Notificaciones: IFTTT",
         "finalcutpro_notifications_imessage_label": "Notificaciones: iMessage",
         "finalcutpro_notifications_manager_label": "Manager: Notificaciones",
         "finalcutpro_notifications_prowl_label": "Notificaciones: Prowl",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "Preferencias: General",
         "finalcutpro_preferences_manager_label": "Preferencias: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferencias: Escanear Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Preferencias: ortografía",
         "finalcutpro_setup_scan_label": "Configuración: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Configuración: comprobación de versión no compatible",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "Historial de cartón de texto",
         "global_screencapture_action": "La captura de pantalla",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "Fragmentos",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Bancos de la barra táctil",
         "global_widgets_action": "Widgets de la barra táctil global",
@@ -938,6 +944,10 @@
         "goToBeginning": "Ir al principio",
         "goToColorInspector": "Ir a Color Inspector",
         "goToEnd": "Ir al final",
+        "goToNextFrameWithMutedAudio": "Ir al siguiente cuadro (con audio silenciado)",
+        "goToNextFrameWithMutedAudioDescription": "Mueva el cursor de reproducción al siguiente cuadro con audio silenciado.",
+        "goToPreviousFrameWithMutedAudio": "Ir al cuadro anterior (con audio silenciado)",
+        "goToPreviousFrameWithMutedAudioDescription": "Mueva la cabeza lectora al cuadro anterior con audio silenciado.",
         "goToRangeEnd": "Ir al rango final",
         "goToRangeStart": "Ir al inicio del rango",
         "gradient": "Gradiente",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "Ayuda a traducir CommandPost",
         "helpandsupport_group": "Servicio de asistencia",
         "hiddenFinalCutProPreferences": "Preferencias ocultas de Final Cut Pro",
+        "hideKeyword": "Ocultar palabra clave",
         "hideRejected": "Ocultar rechazado",
         "high": "Alto",
         "highlightPlayhead": "Resaltar Playhead",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "Notificaciones de iMessage",
         "icon": "Icono",
         "identification": "Identificación",
+        "iftttAPIKey": "Webhook API Key",
+        "iftttEnableNotifications": "Habilitar integración IFTTT",
+        "iftttEventName": "Nombre del evento de webhook",
+        "iftttGetAPIKey": "Obtener clave de API de Webhook",
+        "iftttNotifications": "Notificaciones IFTTT",
+        "iftttServerFailed": "Error de conexión del servidor IFTTT",
+        "iftttSignup": "Registrarse para una cuenta IFTTT",
         "ignore": "Ignorar",
         "ignoreBackgroundTasks": "Ignorar advertencia de tareas en segundo plano",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore la tecla ESC cuando Final Cut Pro esté en pantalla completa",
@@ -1110,6 +1128,7 @@
         "medium": "Medio",
         "memory": "Memoria",
         "menuChoiceSubText": "Menú: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "El elemento del menú no se pudo activar correctamente.",
         "menubarHeading": "Barra de menús",
         "menubarPanelLabel": "Barra de menús",
         "menubarPanelTooltip": "Preferencias de barra de menú",
@@ -1357,9 +1376,11 @@
         "relative": "Relativo",
         "reload": "Recargar",
         "rememberLastQuery": "Recuerde la última consulta",
+        "removeFavouriteKeyword": "Eliminar palabra clave favorita",
         "removeFromList": "Quitar de la lista",
         "renameButton": "Botón Renombrar",
         "renameButtonQuestion": "¿A qué le gustaría cambiar el nombre de este botón?",
+        "renameClip": "Cambiar nombre de clip",
         "renderComplete": "Render completo!",
         "replace": "Reemplazar",
         "replaceAll": "Reemplaza todo",
@@ -1387,6 +1408,11 @@
         "restore": "Restaurar",
         "restoreBrowserLayoutForSelectedCollection_title": "Restaurar el diseño del navegador para la colección seleccionada",
         "restoreBrowserLayoutToMemory": "Restaurar el diseño del navegador a la memoria",
+        "restoreHiddenKeyword": "Restaurar palabra clave oculta",
+        "revealInKeywordCollection": "Revelar en la colección de palabras clave",
+        "revealInKeywordCollectionAndSolo": "Revelar en Keyword Collection & Solo",
+        "revealInKeywordCollectionAndSoloDescription": "Revela el clip de la línea de tiempo actualmente seleccionado en una colección específica de palabras clave del navegador y solo",
+        "revealInKeywordCollectionDescription": "Revela el clip de línea de tiempo seleccionado actualmente en una colección específica de palabras clave del navegador",
         "reverse": "Marcha atrás",
         "right": "Derecha",
         "rightClickToAssignAction": "Puede hacer clic derecho en este botón para asignarle una acción.",
@@ -1444,6 +1470,7 @@
         "segments": "Segmentos",
         "select": "Seleccionar",
         "selectAFolderToSaveCSV": "Seleccione una carpeta para guardar el CSV en",
+        "selectActiveLibraryInBrowser": "Seleccione Biblioteca activa en el navegador",
         "selectCompressorDestination": "Seleccione una carpeta de destino:",
         "selectCompressorSettingsFile": "Seleccione un archivo de configuración del compresor:",
         "selectDestinationFolder": "Seleccione una carpeta de destino:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Seleccione el medio del clip anterior en la misma historia",
         "selectRightAudioEdge": "Seleccione Right Audio Edge",
         "selectRightEdge": "Seleccione el borde derecho",
+        "selectTopmostLibraryInBrowser": "Seleccione la biblioteca superior en el navegador",
         "selectVoice": "Seleccionar voz",
         "selected": "Seleccionado",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "El clip seleccionado no ofrece ninguna opción de Alineación de texto.",
@@ -1606,6 +1634,7 @@
         "softness": "Blandura",
         "sound": "Sonar",
         "spacing": "Espaciado",
+        "sponsorCommandPost": "Patrocinador CommandPost",
         "stabilizationMethod": "Método de estabilización",
         "start": "comienzo",
         "startScan": "Iniciar escaneo",
