--- a/src/extensions/languages/Swedish.json
+++ b/src/extensions/languages/Swedish.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Widget: Fönsterreglage",
         "core_watchfolders_manager_label": "Manager: Titta på mappar",
         "core_watchfolders_menuitem_label": "Titta på mappmenyobjekt",
+        "correctSpellingAutomatically": "Rätt stavning automatiskt",
         "cpAddNoteToSelectedClip_title": "Lägg till anteckning till vald klipp",
         "cpAddNoteToSelectedClips_title": "Lägg till anteckning till valda klipp (er)",
         "cpAllowTasksDuringPlayback_title": "Växla rendering under uppspelning",
@@ -665,6 +666,7 @@
         "favorites": "favoriter",
         "favourite": "Favorit",
         "favouriteFolderError": "Det finns för närvarande ingen favoritmapp sparad för den här åtgärden.\n\nSpara en favoritmapp för den här åtgärden och försök igen.",
+        "favouriteKeyword": "Favorit sökord",
         "favourites": "favoriter",
         "fcpMediaFolderCancel": "Annullera",
         "fcpMediaFolderImport": "Importera",
@@ -740,6 +742,7 @@
         "finalcutpro_browser_layouts_label": "Webbläsare: Spara och återställa layouter",
         "finalcutpro_browser_pasteboardtomarkers_label": "Webbläsare: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Webbläsare: Playhead-funktioner",
+        "finalcutpro_browser_selectlibrary_label": "Webbläsare: Välj bibliotek",
         "finalcutpro_browser_soloclip_label": "Webbläsare: Solo Clip",
         "finalcutpro_commands_actions_label": "Kommando åtgärder",
         "finalcutpro_commands_label": "Final Cut Pro-tangentbordskommandon",
@@ -798,6 +801,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI-kontroller: Videoinspektör",
         "finalcutpro_midi_controls_zoom_label": "MIDI-kontroller: Timeline Zoom",
         "finalcutpro_midi_manager_label": "Chef: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Meddelanden: IFTTT",
         "finalcutpro_notifications_imessage_label": "Meddelanden: iMessage",
         "finalcutpro_notifications_manager_label": "Manager: Meddelanden",
         "finalcutpro_notifications_prowl_label": "Notiser: Prowl",
@@ -810,6 +814,7 @@
         "finalcutpro_preferences_general_label": "Inställningar: Allmänt",
         "finalcutpro_preferences_manager_label": "Inställningar: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Inställningar: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Inställningar: stavning",
         "finalcutpro_setup_scan_label": "Inställning: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Inställning: Versionskontroll som inte stöds",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -930,6 +935,7 @@
         "global_pasteboard_action": "Text Pasteboard History",
         "global_screencapture_action": "Skärminspelning",
         "global_scripts_action": "Applescript",
+        "global_snippets_action": "utdrag",
         "global_streamDeckbanks_action": "Stream däckbanker",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Globala pekfältwidgets",
@@ -938,6 +944,10 @@
         "goToBeginning": "Gå till början",
         "goToColorInspector": "Gå till Color Inspector",
         "goToEnd": "Gå till slutet",
+        "goToNextFrameWithMutedAudio": "Gå till Nästa bild (med dämpat ljud)",
+        "goToNextFrameWithMutedAudioDescription": "Flytta spelhuvudet till nästa bild med dämpat ljud.",
+        "goToPreviousFrameWithMutedAudio": "Gå till föregående bild (med dämpat ljud)",
+        "goToPreviousFrameWithMutedAudioDescription": "Flytta spelhuvudet till föregående bild med avstängt ljud.",
         "goToRangeEnd": "Gå till Range End",
         "goToRangeStart": "Gå till Range Start",
         "gradient": "Lutning",
@@ -955,6 +965,7 @@
         "helpTranslateCommandPost": "Hjälp med att översätta CommandPost",
         "helpandsupport_group": "Hjälp och support",
         "hiddenFinalCutProPreferences": "Dolda Final Cut Pro-inställningar",
+        "hideKeyword": "Dölj sökord",
         "hideRejected": "Dölj Avvisat",
         "high": "Hög",
         "highlightPlayhead": "Markera Playhead",
@@ -988,6 +999,13 @@
         "iMessageNotifications": "iMessage-aviseringar",
         "icon": "Ikon",
         "identification": "Identifiering",
+        "iftttAPIKey": "Webhook API-nyckel",
+        "iftttEnableNotifications": "Aktivera IFTTT-integration",
+        "iftttEventName": "Webhook Event Name",
+        "iftttGetAPIKey": "Hämta Webhook API-nyckel",
+        "iftttNotifications": "IFTTT-aviseringar",
+        "iftttServerFailed": "IFTTT-serveranslutningsfel",
+        "iftttSignup": "Registrera dig för ett IFTTT-konto",
         "ignore": "Ignorera",
         "ignoreBackgroundTasks": "Ignorera bakgrundsuppgifter Varning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignorera ESC-nyckeln när Final Cut Pro är fullskärm",
@@ -1110,6 +1128,7 @@
         "medium": "Medium",
         "memory": "Minne",
         "menuChoiceSubText": "Meny: %{sökväg}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Menyalternativet kunde inte utlöses framgångsrikt.",
         "menubarHeading": "Menyfältet",
         "menubarPanelLabel": "Menyfältet",
         "menubarPanelTooltip": "Inställningar för menyraden",
@@ -1357,9 +1376,11 @@
         "relative": "Släkting",
         "reload": "Ladda om",
         "rememberLastQuery": "Kom ihåg sista frågan",
+        "removeFavouriteKeyword": "Ta bort favorit sökord",
         "removeFromList": "Ta bort från listan",
         "renameButton": "Byt namn på knappen",
         "renameButtonQuestion": "Vad vill du döpa om den här knappen till?",
+        "renameClip": "Byt namn på klipp",
         "renderComplete": "Rendering slutförd!",
         "replace": "Byta ut",
         "replaceAll": "Ersätt alla",
@@ -1387,6 +1408,11 @@
         "restore": "Återställa",
         "restoreBrowserLayoutForSelectedCollection_title": "Återställ webbläsarlayout för vald samling",
         "restoreBrowserLayoutToMemory": "Återställ webbläsarlayout till minne",
+        "restoreHiddenKeyword": "Återställ dold sökord",
+        "revealInKeywordCollection": "Avslöja i nyckelordssamling",
+        "revealInKeywordCollectionAndSolo": "Avslöja i nyckelordssamling & solo",
+        "revealInKeywordCollectionAndSoloDescription": "Visar det för närvarande valda tidslinjeklippet i en specifik webbläsarsökordssamling och är ensam",
+        "revealInKeywordCollectionDescription": "Visar det för närvarande valda tidslinjeklippet i en specifik webbläsarsökordssamling",
         "reverse": "Omvänd",
         "right": "Höger",
         "rightClickToAssignAction": "Du kan högerklicka på den här knappen för att tilldela en åtgärd till den.",
@@ -1444,6 +1470,7 @@
         "segments": "segment",
         "select": "Välj",
         "selectAFolderToSaveCSV": "Välj en mapp för att spara CSV i",
+        "selectActiveLibraryInBrowser": "Välj Aktivt bibliotek i webbläsaren",
         "selectCompressorDestination": "Välj en destinationsmapp:",
         "selectCompressorSettingsFile": "Välj en kompressorinställningsfil:",
         "selectDestinationFolder": "Välj en destinationsmapp:",
@@ -1455,6 +1482,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Välj Mitt i föregående klipp i samma berättelse",
         "selectRightAudioEdge": "Välj höger ljudkant",
         "selectRightEdge": "Välj höger kant",
+        "selectTopmostLibraryInBrowser": "Välj Bästa bibliotek i webbläsaren",
         "selectVoice": "Välj röst",
         "selected": "Vald",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Det valda klippet erbjuder inga alternativ för textjustering.",
@@ -1606,6 +1634,7 @@
         "softness": "Mjukhet",
         "sound": "Ljud",
         "spacing": "Mellanrum",
+        "sponsorCommandPost": "Sponsor CommandPost",
         "stabilizationMethod": "Stabiliseringsmetod",
         "start": "Start",
         "startScan": "Starta skanning",
