--- a/src/extensions/languages/Ukrainian.json
+++ b/src/extensions/languages/Ukrainian.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Віджет: повзунок вікна",
         "core_watchfolders_manager_label": "Менеджер: перегляд папок",
         "core_watchfolders_menuitem_label": "Пункт меню \"Перегляд папок\"",
+        "correctSpellingAutomatically": "Виправити правопис автоматично",
         "cpAddNoteToSelectedClip_title": "Додати примітку до вибраного кліпу",
         "cpAddNoteToSelectedClips_title": "Додати примітку до вибраних кліпів",
         "cpAllowTasksDuringPlayback_title": "Перемикання візуалізації під час відтворення",
@@ -667,6 +668,7 @@
         "favorites": "Вибране",
         "favourite": "Улюблений",
         "favouriteFolderError": "Наразі для цієї дії не збережена улюблена папка.\n\nЗбережіть улюблену папку для цієї дії та повторіть спробу.",
+        "favouriteKeyword": "Улюблене ключове слово",
         "favourites": "Вибране",
         "fcpMediaFolderCancel": "Скасувати",
         "fcpMediaFolderImport": "Імпортувати",
@@ -748,6 +750,7 @@
         "finalcutpro_browser_layouts_label": "Браузер: Зберегти та відновити макети",
         "finalcutpro_browser_pasteboardtomarkers_label": "Браузер: маркери для монтажного картону",
         "finalcutpro_browser_playhead_label": "Браузер: Функції Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Браузер: виберіть Бібліотека",
         "finalcutpro_browser_soloclip_label": "Браузер: Індивідуальний кліп",
         "finalcutpro_commands_actions_label": "Дії команд",
         "finalcutpro_commands_label": "Команди клавіатури Final Cut Pro",
@@ -806,6 +809,7 @@
         "finalcutpro_midi_controls_video_label": "Контроли MIDI: інспектор відео",
         "finalcutpro_midi_controls_zoom_label": "Контроли MIDI: Часова шкала Збільшити",
         "finalcutpro_midi_manager_label": "Менеджер: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Сповіщення: IFTTT",
         "finalcutpro_notifications_imessage_label": "Сповіщення: iMessage",
         "finalcutpro_notifications_manager_label": "Менеджер: сповіщення",
         "finalcutpro_notifications_prowl_label": "Повідомлення: Prowl",
@@ -818,6 +822,7 @@
         "finalcutpro_preferences_general_label": "Налаштування: Загальні",
         "finalcutpro_preferences_manager_label": "Налаштування: Менеджер панелей",
         "finalcutpro_preferences_scanfinalcutpro_label": "Налаштування: Сканування Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Переваги: Правопис",
         "finalcutpro_setup_scan_label": "Налаштування: остаточне сканування Pro Plugin",
         "finalcutpro_setup_unsupportedversion_label": "Налаштування: Непідтримувана версія перевірки",
         "finalcutpro_streamdeck_label": "Потікова палуба",
@@ -938,6 +943,7 @@
         "global_pasteboard_action": "Текстова картонна історія",
         "global_screencapture_action": "Захоплення екрану",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "Сніппети",
         "global_streamDeckbanks_action": "Стінові колоди",
         "global_touchbarbanks_action": "Сенсорні банки",
         "global_widgets_action": "Віджети глобальної панелі сенсорного меню",
@@ -946,6 +952,10 @@
         "goToBeginning": "Перейти до початку",
         "goToColorInspector": "Перейдіть до Інспектора кольорів",
         "goToEnd": "Перейти до кінця",
+        "goToNextFrameWithMutedAudio": "Перехід до наступного кадру (із вимкнутим звуком)",
+        "goToNextFrameWithMutedAudioDescription": "Перемістіть програвач на наступний кадр із відключеним звуком.",
+        "goToPreviousFrameWithMutedAudio": "Перейти до попереднього кадру (із вимкнутим звуком)",
+        "goToPreviousFrameWithMutedAudioDescription": "Перемістіть відтворення на попередній кадр із відключеним звуком.",
         "goToRangeEnd": "Перейти до кінця діапазону",
         "goToRangeStart": "Перейти до діапазону Пуск",
         "gradient": "Градієнт",
@@ -963,6 +973,7 @@
         "helpTranslateCommandPost": "Допоможіть перекласти CommandPost",
         "helpandsupport_group": "Довідка та підтримка",
         "hiddenFinalCutProPreferences": "Налаштування прихованого остаточного вирізу",
+        "hideKeyword": "Сховати ключове слово",
         "hideRejected": "Сховати відхилено",
         "high": "Високий",
         "highlightPlayhead": "Виділіть головку",
@@ -996,6 +1007,13 @@
         "iMessageNotifications": "Сповіщення iMessage",
         "icon": "Значок",
         "identification": "Ідентифікація",
+        "iftttAPIKey": "Ключ API Webhook",
+        "iftttEnableNotifications": "Увімкнути інтеграцію IFTTT",
+        "iftttEventName": "Назва події Webhook",
+        "iftttGetAPIKey": "Отримайте ключ API Webhook",
+        "iftttNotifications": "Повідомлення IFTTT",
+        "iftttServerFailed": "Помилка підключення сервера IFTTT",
+        "iftttSignup": "Реєстрація на рахунок IFTTT",
         "ignore": "Ігноруйте",
         "ignoreBackgroundTasks": "Ігноруйте попередження фонових завдань",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ігноруйте ESC Key, коли Final Cut Pro є повноекранним",
@@ -1120,6 +1138,7 @@
         "medium": "Середній",
         "memory": "Пам'ять",
         "menuChoiceSubText": "Меню: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Елемент меню не вдалося запустити.",
         "menubarHeading": "Меню",
         "menubarPanelLabel": "Меню",
         "menubarPanelTooltip": "Параметри меню",
@@ -1369,9 +1388,11 @@
         "relative": "Відносна",
         "reload": "Перезавантажити",
         "rememberLastQuery": "Запам'ятати останній запит",
+        "removeFavouriteKeyword": "Видаліть улюблене ключове слово",
         "removeFromList": "Видалити зі списку",
         "renameButton": "Перейменувати кнопку",
         "renameButtonQuestion": "На що ви хочете перейменувати цю кнопку?",
+        "renameClip": "Перейменуйте кліп",
         "renderComplete": "Візуалізація завершена!",
         "replace": "Замініть",
         "replaceAll": "Замінити всіх",
@@ -1399,6 +1420,11 @@
         "restore": "Відновлення",
         "restoreBrowserLayoutForSelectedCollection_title": "Відновлення макета браузера для вибраної колекції",
         "restoreBrowserLayoutToMemory": "Відновлення макета браузера до пам'яті",
+        "restoreHiddenKeyword": "Відновити приховане ключове слово",
+        "revealInKeywordCollection": "Розкрийте у колекції ключових слів",
+        "revealInKeywordCollectionAndSolo": "Розкрийте у колекції ключових слів та соло",
+        "revealInKeywordCollectionAndSoloDescription": "Виявляє вибраний на даний момент кліп у певній колекції ключових слів браузера та соло",
+        "revealInKeywordCollectionDescription": "Виявляє вибраний на даний момент кліп у певній колекції ключових слів браузера",
         "reverse": "Реверс",
         "right": "Право",
         "rightClickToAssignAction": "Ви можете правою кнопкою миші натиснути цю кнопку, щоб призначити дію.",
@@ -1460,6 +1486,7 @@
         "segments": "Сегменти",
         "select": "Виберіть",
         "selectAFolderToSaveCSV": "Виберіть папку, до якої потрібно зберегти файл CSV",
+        "selectActiveLibraryInBrowser": "Виберіть Активна бібліотека в браузері",
         "selectCompressorDestination": "Виберіть папку призначення:",
         "selectCompressorSettingsFile": "Виберіть файл налаштувань компресора:",
         "selectDestinationFolder": "Виберіть папку призначення:",
@@ -1471,6 +1498,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Виберіть середину попереднього кліпу в тому самому сюжеті",
         "selectRightAudioEdge": "Виберіть Праворуч",
         "selectRightEdge": "Виберіть Правий край",
+        "selectTopmostLibraryInBrowser": "Виберіть Найпопулярнішу бібліотеку в браузері",
         "selectVoice": "Виберіть Голос",
         "selected": "Вибрано",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Вибраний кліп не пропонує жодних параметрів вирівнювання тексту.",
@@ -1650,6 +1678,7 @@
         "softness": "М’якість",
         "sound": "Звук",
         "spacing": "Інтервал",
+        "sponsorCommandPost": "Спонсор CommandPost",
         "stabilizationMethod": "Метод стабілізації",
         "start": "Початок",
         "startScan": "Почати сканування",
