--- a/src/extensions/languages/Vietnamese.json
+++ b/src/extensions/languages/Vietnamese.json
@@ -345,6 +345,7 @@
         "core_touchbar_widgets_windowslide_label": "Tiện ích: Thanh trượt cửa sổ",
         "core_watchfolders_manager_label": "Manger: Xem thư mục",
         "core_watchfolders_menuitem_label": "Xem Mục Menu Thư mục",
+        "correctSpellingAutomatically": "Chính tả tự động",
         "cpAddNoteToSelectedClip_title": "Thêm Ghi chú vào Clip Đã Chọn",
         "cpAddNoteToSelectedClips_title": "Thêm ghi chú vào (các) clip đã chọn",
         "cpAllowTasksDuringPlayback_title": "Toggle Rendering Trong khi Phát lại",
@@ -664,6 +665,7 @@
         "favorites": "Yêu thích",
         "favourite": "Yêu thích",
         "favouriteFolderError": "Không có thư mục yêu thích hiện được lưu cho hành động này.\n\nVui lòng lưu một thư mục yêu thích cho hành động này và thử lại.",
+        "favouriteKeyword": "Từ khóa yêu thích",
         "favourites": "Yêu thích",
         "fcpMediaFolderCancel": "Hủy bỏ",
         "fcpMediaFolderImport": "Nhập",
@@ -736,6 +738,7 @@
         "finalcutpro_browser_layouts_label": "Trình duyệt: Lưu và khôi phục bố cục",
         "finalcutpro_browser_pasteboardtomarkers_label": "Trình duyệt: Các dấu mốc trên bảng đến Clip",
         "finalcutpro_browser_playhead_label": "Trình duyệt: Tính năng của Playhead",
+        "finalcutpro_browser_selectlibrary_label": "Trình duyệt: Chọn Thư viện",
         "finalcutpro_browser_soloclip_label": "Trình duyệt: Solo Clip",
         "finalcutpro_commands_actions_label": "Hành động lệnh",
         "finalcutpro_commands_label": "Các lệnh của Bàn phím Final Cut Pro",
@@ -794,6 +797,7 @@
         "finalcutpro_midi_controls_video_label": "Điều khiển MIDI: Trình kiểm tra video",
         "finalcutpro_midi_controls_zoom_label": "Điều khiển MIDI: Phóng to theo thời gian",
         "finalcutpro_midi_manager_label": "Người quản lý: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Thông báo: IFTTT",
         "finalcutpro_notifications_imessage_label": "Thông báo: iMessage",
         "finalcutpro_notifications_manager_label": "Người quản lý: Thông báo",
         "finalcutpro_notifications_prowl_label": "Thông báo: Prowl",
@@ -806,6 +810,7 @@
         "finalcutpro_preferences_general_label": "Tùy chọn: Chung",
         "finalcutpro_preferences_manager_label": "Tùy chọn: Quản lý bảng điều khiển",
         "finalcutpro_preferences_scanfinalcutpro_label": "Tùy chọn: Quét Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Sở thích: Chính tả",
         "finalcutpro_setup_scan_label": "Thiết lập: Quét plugin cuối cùng Pro",
         "finalcutpro_setup_unsupportedversion_label": "Thiết lập: Kiểm tra Phiên bản Không được Hỗ trợ",
         "finalcutpro_streamdeck_label": "Suối sàn",
@@ -926,6 +931,7 @@
         "global_pasteboard_action": "Văn bản Lịch sử Pasteboard",
         "global_screencapture_action": "Chụp màn hình",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "Đoạn trích",
         "global_streamDeckbanks_action": "Ngân hàng Stream Deck",
         "global_touchbarbanks_action": "Ngân hàng Touch Bar",
         "global_widgets_action": "Tiện ích toàn cầu của thanh cảm ứng",
@@ -934,6 +940,10 @@
         "goToBeginning": "Đi đến đầu",
         "goToColorInspector": "Chuyển đến Trình theo dõi màu",
         "goToEnd": "Chuyển đến Kết thúc",
+        "goToNextFrameWithMutedAudio": "Chuyển đến Khung tiếp theo (với âm thanh bị tắt)",
+        "goToNextFrameWithMutedAudioDescription": "Di chuyển đầu phát sang khung tiếp theo với âm thanh bị tắt.",
+        "goToPreviousFrameWithMutedAudio": "Chuyển đến Khung trước đó (với âm thanh bị tắt)",
+        "goToPreviousFrameWithMutedAudioDescription": "Di chuyển đầu phát sang khung trước với âm thanh bị tắt.",
         "goToRangeEnd": "Chuyển đến Phạm vi kết thúc",
         "goToRangeStart": "Đi đến phạm vi bắt đầu",
         "gradient": "Dốc",
@@ -951,6 +961,7 @@
         "helpTranslateCommandPost": "Trợ giúp Dịch CommandPost",
         "helpandsupport_group": "Trợ giúp & Hỗ trợ",
         "hiddenFinalCutProPreferences": "Hidden Final Cut Pro Preferences",
+        "hideKeyword": "Ẩn từ khóa",
         "hideRejected": "Ẩn bị từ chối",
         "high": "Cao",
         "highlightPlayhead": "Đánh dấu Playhead",
@@ -984,6 +995,13 @@
         "iMessageNotifications": "Thông báo iMessage",
         "icon": "Biểu tượng",
         "identification": "Nhận biết",
+        "iftttAPIKey": "Khóa API Webhook",
+        "iftttEnableNotifications": "Kích hoạt tích hợp IFTTT",
+        "iftttEventName": "Tên sự kiện Webhook",
+        "iftttGetAPIKey": "Nhận khóa API Webhook",
+        "iftttNotifications": "Thông báo IFTTT",
+        "iftttServerFailed": "Lỗi kết nối máy chủ IFTTT",
+        "iftttSignup": "Đăng ký tài khoản IFTTT",
         "ignore": "Bỏ qua",
         "ignoreBackgroundTasks": "Bỏ qua cảnh báo tác vụ nền",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Bỏ qua ESC Key khi Final Cut Pro là toàn màn hình",
@@ -1105,6 +1123,7 @@
         "medium": "Trung bình",
         "memory": "Ký ức",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "Mục menu không thể được kích hoạt thành công.",
         "menubarHeading": "Thanh menu",
         "menubarPanelLabel": "Thanh menu",
         "menubarPanelTooltip": "Tuỳ chọn Menubar",
@@ -1351,9 +1370,11 @@
         "relative": "Quan hệ",
         "reload": "Tải lại",
         "rememberLastQuery": "Nhớ Lần Truy vấn",
+        "removeFavouriteKeyword": "Xóa từ khóa yêu thích",
         "removeFromList": "Xóa từ danh sách",
         "renameButton": "Đổi tên nút",
         "renameButtonQuestion": "Bạn muốn đổi tên nút này thành gì?",
+        "renameClip": "Đổi tên clip",
         "renderComplete": "Render Complete!",
         "replace": "Thay thế",
         "replaceAll": "Thay thế tất cả",
@@ -1381,6 +1402,11 @@
         "restore": "Khôi phục",
         "restoreBrowserLayoutForSelectedCollection_title": "Khôi phục bố cục trình duyệt cho bộ sưu tập đã chọn",
         "restoreBrowserLayoutToMemory": "Khôi phục bố cục trình duyệt vào bộ nhớ",
+        "restoreHiddenKeyword": "Khôi phục từ khóa ẩn",
+        "revealInKeywordCollection": "Tiết lộ trong Bộ sưu tập từ khóa",
+        "revealInKeywordCollectionAndSolo": "Tiết lộ trong Bộ sưu tập từ khóa & Solo",
+        "revealInKeywordCollectionAndSoloDescription": "Hiển thị clip dòng thời gian hiện được chọn trong Bộ sưu tập từ khóa trình duyệt cụ thể & độc tấu",
+        "revealInKeywordCollectionDescription": "Hiển thị clip dòng thời gian hiện được chọn trong Bộ sưu tập từ khóa trình duyệt cụ thể",
         "reverse": "Đảo ngược",
         "right": "Đúng",
         "rightClickToAssignAction": "Bạn có thể nhấp chuột phải vào nút này để gán một hành động cho nó.",
@@ -1436,6 +1462,7 @@
         "segments": "Phân đoạn",
         "select": "Lựa chọn",
         "selectAFolderToSaveCSV": "Vui lòng chọn một thư mục để lưu CSV vào",
+        "selectActiveLibraryInBrowser": "Chọn Thư viện hoạt động trong trình duyệt",
         "selectCompressorDestination": "Chọn thư mục đích:",
         "selectCompressorSettingsFile": "Chọn một tập tin cài đặt máy nén:",
         "selectDestinationFolder": "Vui lòng chọn một thư mục đích:",
@@ -1447,6 +1474,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Chọn giữa clip trước trong cùng một cốt truyện",
         "selectRightAudioEdge": "Chọn Cạnh âm thanh bên phải",
         "selectRightEdge": "Chọn cạnh phải",
+        "selectTopmostLibraryInBrowser": "Chọn Thư viện trên cùng trong Trình duyệt",
         "selectVoice": "Chọn Tiếng nói",
         "selected": "Đã chọn",
         "selectedClipDoesntOfferAnyTextAlignmentOptions": "Clip đã chọn không cung cấp bất kỳ tùy chọn Sắp xếp văn bản nào.",
@@ -1584,6 +1612,7 @@
         "softness": "Sự mềm mại",
         "sound": "Âm thanh",
         "spacing": "khoảng cách",
+        "sponsorCommandPost": "Nhà tài trợ CommandPost",
         "stabilizationMethod": "Phương pháp ổn định",
         "start": "Khởi đầu",
         "startScan": "Bắt đầu quét",
